--- a/arch/arm/boot/dts/bema9x.dts
+++ b/arch/arm/boot/dts/bema9x.dts
@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2015 F&S Elektronik Systeme GmbH
+ * Copyright (C) 2015-2017 F&S Elektronik Systeme GmbH
  *
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License version 2 as
@@ -335,22 +335,22 @@ pwmleds {
 				MX6SX_PAD_LCD1_RESET__GPIO3_IO_27	0x80000000
 
 				/* LED_YELLOW_PWM_ON */
-				MX6SX_PAD_RGMII2_TD0__GPIO5_IO_18	0x0001b0b1
+				MX6SX_PAD_RGMII2_TD0__GPIO5_IO_18	0x1b0b1
 
 				/* BootGPIO */
-				MX6SX_PAD_GPIO1_IO09__GPIO1_IO_9	0x0001b0b1
+				MX6SX_PAD_GPIO1_IO09__GPIO1_IO_9	0x1b0b1
 
 				/* TOUCH RESET */
-				MX6SX_PAD_LCD1_DATA19__GPIO3_IO_20	0x0001b0b1
+				MX6SX_PAD_LCD1_DATA19__GPIO3_IO_20	0x1b0b1
 
 				/* TOUCH INTERUPT*/
-				MX6SX_PAD_GPIO1_IO04__GPIO1_IO_4	0x0001b0b1
+				MX6SX_PAD_GPIO1_IO04__GPIO1_IO_4	0x1b0b1
 
 				/* INT_BUTTONC */
-				MX6SX_PAD_LCD1_DATA20__GPIO3_IO_21	0x0001b0b1
+				MX6SX_PAD_LCD1_DATA20__GPIO3_IO_21	0x1b0b1
 
 				/* DVS */
-				MX6SX_PAD_QSPI1B_DQS__GPIO4_IO_28	0x0001b0b1
+				MX6SX_PAD_QSPI1B_DQS__GPIO4_IO_28	0x1b0b1
 			>;
 		};
 
@@ -358,20 +358,20 @@ pwmleds {
 		pinctrl_enet1_1: enet1grp-1 {
 			fsl,pins = <
 				/* gpio to reset phy, activated in uboot */
-//				MX6SX_PAD_ENET2_CRS__GPIO2_IO_7		0xa0b1
+//				MX6SX_PAD_ENET2_CRS__GPIO2_IO_7		0x0a0b1
 				/* 50MHz base clock from CPU to PHY */
 				MX6SX_PAD_GPIO1_IO05__ENET1_REF_CLK1	0x400000a1
 				/* MDIO */
-				MX6SX_PAD_ENET1_MDC__ENET1_MDC		0xa0b1
-				MX6SX_PAD_ENET1_MDIO__ENET1_MDIO	0xa0b1
+				MX6SX_PAD_ENET1_MDC__ENET1_MDC		0x0a0b1
+				MX6SX_PAD_ENET1_MDIO__ENET1_MDIO	0x0a0b1
 				/* fec1 */
-				MX6SX_PAD_RGMII1_TD0__ENET1_TX_DATA_0	0xa0b1
-				MX6SX_PAD_RGMII1_TD1__ENET1_TX_DATA_1	0xa0b1
-				MX6SX_PAD_RGMII1_TX_CTL__ENET1_TX_EN	0xa0b1
-				MX6SX_PAD_RGMII1_RXC__ENET1_RX_ER	0x3081
-				MX6SX_PAD_RGMII1_RD0__ENET1_RX_DATA_0	0x3081
-				MX6SX_PAD_RGMII1_RD1__ENET1_RX_DATA_1	0x3081
-				MX6SX_PAD_RGMII1_RX_CTL__ENET1_RX_EN	0x3081
+				MX6SX_PAD_RGMII1_TD0__ENET1_TX_DATA_0	0x0a0b1
+				MX6SX_PAD_RGMII1_TD1__ENET1_TX_DATA_1	0x0a0b1
+				MX6SX_PAD_RGMII1_TX_CTL__ENET1_TX_EN	0x0a0b1
+				MX6SX_PAD_RGMII1_RXC__ENET1_RX_ER	0x03081
+				MX6SX_PAD_RGMII1_RD0__ENET1_RX_DATA_0	0x03081
+				MX6SX_PAD_RGMII1_RD1__ENET1_RX_DATA_1	0x03081
+				MX6SX_PAD_RGMII1_RX_CTL__ENET1_RX_EN	0x03081
 			>;
 		};
 
@@ -380,28 +380,28 @@ pwmleds {
 			LCD1_DATA20 -> int_buttonc, */
 		pinctrl_lcdif1_1: lcd1grp-1 {
 			fsl,pins = <
-				MX6SX_PAD_LCD1_CLK__LCDIF1_CLK		0x00b0
-				MX6SX_PAD_LCD1_DATA00__LCDIF1_DATA_0	0x00b0
-				MX6SX_PAD_LCD1_DATA01__LCDIF1_DATA_1	0x00b0
-				MX6SX_PAD_LCD1_DATA02__LCDIF1_DATA_2	0x00b0
-				MX6SX_PAD_LCD1_DATA03__LCDIF1_DATA_3	0x00b0
-				MX6SX_PAD_LCD1_DATA04__LCDIF1_DATA_4	0x00b0
-				MX6SX_PAD_LCD1_DATA05__LCDIF1_DATA_5	0x00b0
-				MX6SX_PAD_LCD1_DATA06__LCDIF1_DATA_6	0x00b0
-				MX6SX_PAD_LCD1_DATA07__LCDIF1_DATA_7	0x00b0
-				MX6SX_PAD_LCD1_DATA08__LCDIF1_DATA_8	0x00b0
-				MX6SX_PAD_LCD1_DATA09__LCDIF1_DATA_9	0x00b0
-				MX6SX_PAD_LCD1_DATA10__LCDIF1_DATA_10	0x00b0
-				MX6SX_PAD_LCD1_DATA11__LCDIF1_DATA_11	0x00b0
-				MX6SX_PAD_LCD1_DATA12__LCDIF1_DATA_12	0x00b0
-				MX6SX_PAD_LCD1_DATA13__LCDIF1_DATA_13	0x00b0
-				MX6SX_PAD_LCD1_DATA14__LCDIF1_DATA_14	0x00b0
-				MX6SX_PAD_LCD1_DATA15__LCDIF1_DATA_15	0x00b0
-				MX6SX_PAD_LCD1_DATA16__LCDIF1_DATA_16	0x00b0
-				MX6SX_PAD_LCD1_DATA17__LCDIF1_DATA_17	0x00b0
-				MX6SX_PAD_LCD1_ENABLE__LCDIF1_ENABLE	0x00b0
-				MX6SX_PAD_LCD1_HSYNC__LCDIF1_HSYNC	0x00b0
-				MX6SX_PAD_LCD1_VSYNC__LCDIF1_VSYNC	0x00b0
+				MX6SX_PAD_LCD1_CLK__LCDIF1_CLK		0x000b0
+				MX6SX_PAD_LCD1_DATA00__LCDIF1_DATA_0	0x000b0
+				MX6SX_PAD_LCD1_DATA01__LCDIF1_DATA_1	0x000b0
+				MX6SX_PAD_LCD1_DATA02__LCDIF1_DATA_2	0x000b0
+				MX6SX_PAD_LCD1_DATA03__LCDIF1_DATA_3	0x000b0
+				MX6SX_PAD_LCD1_DATA04__LCDIF1_DATA_4	0x000b0
+				MX6SX_PAD_LCD1_DATA05__LCDIF1_DATA_5	0x000b0
+				MX6SX_PAD_LCD1_DATA06__LCDIF1_DATA_6	0x000b0
+				MX6SX_PAD_LCD1_DATA07__LCDIF1_DATA_7	0x000b0
+				MX6SX_PAD_LCD1_DATA08__LCDIF1_DATA_8	0x000b0
+				MX6SX_PAD_LCD1_DATA09__LCDIF1_DATA_9	0x000b0
+				MX6SX_PAD_LCD1_DATA10__LCDIF1_DATA_10	0x000b0
+				MX6SX_PAD_LCD1_DATA11__LCDIF1_DATA_11	0x000b0
+				MX6SX_PAD_LCD1_DATA12__LCDIF1_DATA_12	0x000b0
+				MX6SX_PAD_LCD1_DATA13__LCDIF1_DATA_13	0x000b0
+				MX6SX_PAD_LCD1_DATA14__LCDIF1_DATA_14	0x000b0
+				MX6SX_PAD_LCD1_DATA15__LCDIF1_DATA_15	0x000b0
+				MX6SX_PAD_LCD1_DATA16__LCDIF1_DATA_16	0x000b0
+				MX6SX_PAD_LCD1_DATA17__LCDIF1_DATA_17	0x000b0
+				MX6SX_PAD_LCD1_ENABLE__LCDIF1_ENABLE	0x000b0
+				MX6SX_PAD_LCD1_HSYNC__LCDIF1_HSYNC	0x000b0
+				MX6SX_PAD_LCD1_VSYNC__LCDIF1_VSYNC	0x000b0
 			>;
 		};
 
@@ -496,14 +496,14 @@ pwmleds {
 
 		pinctrl_i2c3_1: i2c3grp-1 {
 			fsl,pins = <
-				MX6SX_PAD_KEY_COL4__I2C3_SCL	0x4001b8b1
-				MX6SX_PAD_KEY_ROW4__I2C3_SDA	0x4001b8b1
+				MX6SX_PAD_KEY_COL4__I2C3_SCL		0x4001b8b1
+				MX6SX_PAD_KEY_ROW4__I2C3_SDA		0x4001b8b1
 			>;
 		};
 
 		pinctrl_i2c4_1: i2c4grp-1 {
 			fsl,pins = <
-				MX6SX_PAD_SD3_DATA0__I2C4_SCL 		0x4001b8b1
+				MX6SX_PAD_SD3_DATA0__I2C4_SCL		0x4001b8b1
 				MX6SX_PAD_SD3_DATA1__I2C4_SDA		0x4001b8b1
 			>;
 		};
