--- a/arch/arm/boot/dts/cube2.0.dts
+++ b/arch/arm/boot/dts/cube2.0.dts
@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2016 F&S Elektronik Systeme GmbH
+ * Copyright (C) 2016-2017 F&S Elektronik Systeme GmbH
  *
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License version 2 as
@@ -110,7 +110,7 @@
 	/* DEFAULT key */
 	gpio_keys {
 		compatible = "gpio-keys";
- 		#address-cells = <1>;
+		#address-cells = <1>;
 		#size-cells = <0>;
 
 		defaultkey {
@@ -245,19 +245,19 @@
 		pinctrl_hog_1: hoggrp-1 {
 			fsl,pins = <
 				/* WLAN 32kHz clock */
-				MX6UL_PAD_ENET1_RX_EN__REF_CLK_32K	0x0008
+				MX6UL_PAD_ENET1_RX_EN__REF_CLK_32K	0x00008
 
 				/* WLAN_IRQ */
-				MX6UL_PAD_LCD_DATA23__GPIO3_IO28	0xb058
+				MX6UL_PAD_LCD_DATA23__GPIO3_IO28	0x0b058
 
 				/* WLAN_EN */
-				MX6UL_PAD_LCD_DATA08__GPIO3_IO13	0x3020
+				MX6UL_PAD_LCD_DATA08__GPIO3_IO13	0x03020
 
 				/* BT_EN */
-				MX6UL_PAD_LCD_DATA09__GPIO3_IO14	0x3020
+				MX6UL_PAD_LCD_DATA09__GPIO3_IO14	0x03020
 
 				/* DEFAULT key */
-				MX6UL_PAD_UART3_TX_DATA__GPIO1_IO24	0xF020
+				MX6UL_PAD_UART3_TX_DATA__GPIO1_IO24	0x0f020
 			>;
 		};
 
@@ -345,22 +345,22 @@
 #if 0
 			/* Already configured in NBoot/U-Boot */
 			fsl,pins = <
-				MX6SX_PAD_NAND_CLE__RAWNAND_CLE		0xb0b1
-				MX6SX_PAD_NAND_ALE__RAWNAND_ALE		0xb0b1
-				MX6SX_PAD_NAND_WP_B__RAWNAND_WP_B	0xb0b1
-				MX6SX_PAD_NAND_READY_B__RAWNAND_READY_B	0xb000
-				MX6SX_PAD_NAND_CE0_B__RAWNAND_CE0_B	0xb0b1
-				//MX6SX_PAD_NAND_CE1_B__RAWNAND_CE1_B	0xb0b1
-				MX6SX_PAD_NAND_RE_B__RAWNAND_RE_B	0xb0b1
-				MX6SX_PAD_NAND_WE_B__RAWNAND_WE_B	0xb0b1
-				MX6SX_PAD_NAND_DATA00__RAWNAND_DATA00	0xb0b1
-				MX6SX_PAD_NAND_DATA01__RAWNAND_DATA01	0xb0b1
-				MX6SX_PAD_NAND_DATA02__RAWNAND_DATA02	0xb0b1
-				MX6SX_PAD_NAND_DATA03__RAWNAND_DATA03	0xb0b1
-				MX6SX_PAD_NAND_DATA04__RAWNAND_DATA04	0xb0b1
-				MX6SX_PAD_NAND_DATA05__RAWNAND_DATA05	0xb0b1
-				MX6SX_PAD_NAND_DATA06__RAWNAND_DATA06	0xb0b1
-				MX6SX_PAD_NAND_DATA07__RAWNAND_DATA07	0xb0b1
+				MX6SX_PAD_NAND_CLE__RAWNAND_CLE		0x0b0b1
+				MX6SX_PAD_NAND_ALE__RAWNAND_ALE		0x0b0b1
+				MX6SX_PAD_NAND_WP_B__RAWNAND_WP_B	0x0b0b1
+				MX6SX_PAD_NAND_READY_B__RAWNAND_READY_B	0x0b000
+				MX6SX_PAD_NAND_CE0_B__RAWNAND_CE0_B	0x0b0b1
+				//MX6SX_PAD_NAND_CE1_B__RAWNAND_CE1_B	0x0b0b1
+				MX6SX_PAD_NAND_RE_B__RAWNAND_RE_B	0x0b0b1
+				MX6SX_PAD_NAND_WE_B__RAWNAND_WE_B	0x0b0b1
+				MX6SX_PAD_NAND_DATA00__RAWNAND_DATA00	0x0b0b1
+				MX6SX_PAD_NAND_DATA01__RAWNAND_DATA01	0x0b0b1
+				MX6SX_PAD_NAND_DATA02__RAWNAND_DATA02	0x0b0b1
+				MX6SX_PAD_NAND_DATA03__RAWNAND_DATA03	0x0b0b1
+				MX6SX_PAD_NAND_DATA04__RAWNAND_DATA04	0x0b0b1
+				MX6SX_PAD_NAND_DATA05__RAWNAND_DATA05	0x0b0b1
+				MX6SX_PAD_NAND_DATA06__RAWNAND_DATA06	0x0b0b1
+				MX6SX_PAD_NAND_DATA07__RAWNAND_DATA07	0x0b0b1
 			>;
 #endif
 		};
