--- a/arch/arm/boot/dts/gar1.dts
+++ b/arch/arm/boot/dts/gar1.dts
@@ -70,7 +70,8 @@
 	};
 
 	pxp_v4l2 {
-		compatible = "fsl,imx6ul-pxp-v4l2", "fsl,imx6sx-pxp-v4l2", "fsl,imx6sl-pxp-v4l2";
+		compatible = "fsl,imx6ul-pxp-v4l2", "fsl,imx6sx-pxp-v4l2",
+			     "fsl,imx6sl-pxp-v4l2";
 		status = "okay";
 	};
 
@@ -306,10 +307,10 @@
 				/* LED4_Test */
 				MX6UL_PAD_GPIO1_IO09__GPIO1_IO09	0x80000000
 				/* GPIO0 - GPIO3 */
-				MX6UL_PAD_UART3_RTS_B__GPIO1_IO27	0x00b0
-				MX6UL_PAD_UART3_CTS_B__GPIO1_IO26	0x00b0
-				MX6UL_PAD_UART4_TX_DATA__GPIO1_IO28	0x00b0
-				MX6UL_PAD_UART4_RX_DATA__GPIO1_IO29	0x00b0
+				MX6UL_PAD_UART3_RTS_B__GPIO1_IO27	0x000b0
+				MX6UL_PAD_UART3_CTS_B__GPIO1_IO26	0x000b0
+				MX6UL_PAD_UART4_TX_DATA__GPIO1_IO28	0x000b0
+				MX6UL_PAD_UART4_RX_DATA__GPIO1_IO29	0x000b0
 				/* RTC IRQ */
 				MX6UL_PAD_LCD_RESET__GPIO3_IO04		0x0b0b0
 			>;
@@ -398,7 +399,7 @@
 		pinctrl_usbotg1: usbotg1grp {
 			fsl,pins = <
 				/* USB_OTG1_ID: low: host, open: device */
-				MX6UL_PAD_GPIO1_IO00__ANATOP_OTG1_ID 	0x1b000
+				MX6UL_PAD_GPIO1_IO00__ANATOP_OTG1_ID	0x1b000
 			>;
 		};
 
@@ -441,22 +442,22 @@
 		pinctrl_gpmi_nand_1: gpmi-nand-1 {
 			/* Already configured in NBoot/U-Boot */
 			fsl,pins = <
-				MX6SX_PAD_NAND_CLE__RAWNAND_CLE		0xb0b1
-				MX6SX_PAD_NAND_ALE__RAWNAND_ALE		0xb0b1
-				MX6SX_PAD_NAND_WP_B__RAWNAND_WP_B	0xb0b1
-				MX6SX_PAD_NAND_READY_B__RAWNAND_READY_B	0xb000
-				MX6SX_PAD_NAND_CE0_B__RAWNAND_CE0_B	0xb0b1
-				//MX6SX_PAD_NAND_CE1_B__RAWNAND_CE1_B	0xb0b1
-				MX6SX_PAD_NAND_RE_B__RAWNAND_RE_B	0xb0b1
-				MX6SX_PAD_NAND_WE_B__RAWNAND_WE_B	0xb0b1
-				MX6SX_PAD_NAND_DATA00__RAWNAND_DATA00	0xb0b1
-				MX6SX_PAD_NAND_DATA01__RAWNAND_DATA01	0xb0b1
-				MX6SX_PAD_NAND_DATA02__RAWNAND_DATA02	0xb0b1
-				MX6SX_PAD_NAND_DATA03__RAWNAND_DATA03	0xb0b1
-				MX6SX_PAD_NAND_DATA04__RAWNAND_DATA04	0xb0b1
-				MX6SX_PAD_NAND_DATA05__RAWNAND_DATA05	0xb0b1
-				MX6SX_PAD_NAND_DATA06__RAWNAND_DATA06	0xb0b1
-				MX6SX_PAD_NAND_DATA07__RAWNAND_DATA07	0xb0b1
+				MX6SX_PAD_NAND_CLE__RAWNAND_CLE		0x0b0b1
+				MX6SX_PAD_NAND_ALE__RAWNAND_ALE		0x0b0b1
+				MX6SX_PAD_NAND_WP_B__RAWNAND_WP_B	0x0b0b1
+				MX6SX_PAD_NAND_READY_B__RAWNAND_READY_B	0x0b000
+				MX6SX_PAD_NAND_CE0_B__RAWNAND_CE0_B	0x0b0b1
+				//MX6SX_PAD_NAND_CE1_B__RAWNAND_CE1_B	0x0b0b1
+				MX6SX_PAD_NAND_RE_B__RAWNAND_RE_B	0x0b0b1
+				MX6SX_PAD_NAND_WE_B__RAWNAND_WE_B	0x0b0b1
+				MX6SX_PAD_NAND_DATA00__RAWNAND_DATA00	0x0b0b1
+				MX6SX_PAD_NAND_DATA01__RAWNAND_DATA01	0x0b0b1
+				MX6SX_PAD_NAND_DATA02__RAWNAND_DATA02	0x0b0b1
+				MX6SX_PAD_NAND_DATA03__RAWNAND_DATA03	0x0b0b1
+				MX6SX_PAD_NAND_DATA04__RAWNAND_DATA04	0x0b0b1
+				MX6SX_PAD_NAND_DATA05__RAWNAND_DATA05	0x0b0b1
+				MX6SX_PAD_NAND_DATA06__RAWNAND_DATA06	0x0b0b1
+				MX6SX_PAD_NAND_DATA07__RAWNAND_DATA07	0x0b0b1
 			>;
 		};
 #endif
