--- a/arch/arm/boot/dts/netdcua9qdl.dtsi
+++ b/arch/arm/boot/dts/netdcua9qdl.dtsi
@@ -1,5 +1,5 @@
 /*
- * Copyright 2016 F&S Elektronik Systeme GmbH
+ * Copyright 2016-2017 F&S Elektronik Systeme GmbH
  *
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License version 2 as
@@ -17,13 +17,15 @@
 #undef CONFIG_NETDCUA9_MXCFB2
 #undef CONFIG_NETDCUA9_MXCFB3
 
-#if ((CONFIG_NETDCUA9_MXCFB0 == DISPLAY_LCD) && (CONFIG_NETDCUA9_MXCFB1 == DISPLAY_LVDS0))
+#if ((CONFIG_NETDCUA9_MXCFB0 == DISPLAY_LCD) \
+    && (CONFIG_NETDCUA9_MXCFB1 == DISPLAY_LVDS0))
 #undef CONFIG_NETDCUA9_MXCFB1
 #define CONFIG_NETDCUA9_MXCFB1		DISPLAY_LVDS1
 #define __MOVE_LVDS0_TO_LVDS1_DUAL_MODE__
 #endif
 
-#if ((CONFIG_NETDCUA9_MXCFB0 == DISPLAY_LVDS0) && (CONFIG_NETDCUA9_MXCFB1 == DISPLAY_LCD))
+#if ((CONFIG_NETDCUA9_MXCFB0 == DISPLAY_LVDS0) \
+    && (CONFIG_NETDCUA9_MXCFB1 == DISPLAY_LCD))
 #undef CONFIG_NETDCUA9_MXCFB0
 #define CONFIG_NETDCUA9_MXCFB0		DISPLAY_LVDS1
 #define __MOVE_LVDS0_TO_LVDS1_DUAL_MODE__
@@ -36,9 +38,9 @@
 #undef CONFIG_NETDCUA9_LVDS1_DATA_WIDTH
 #undef CONFIG_NETDCUA9_LVDS1_TIMING
 #define CONFIG_NETDCUA9_LVDS1_MAPPING	CONFIG_NETDCUA9_LVDS0_MAPPING
-#define CONFIG_NETDCUA9_LVDS1_BPP		CONFIG_NETDCUA9_LVDS0_BPP
+#define CONFIG_NETDCUA9_LVDS1_BPP	CONFIG_NETDCUA9_LVDS0_BPP
 #define CONFIG_NETDCUA9_LVDS1_PIX_FMT	CONFIG_NETDCUA9_LVDS0_PIX_FMT
-#define CONFIG_NETDCUA9_LVDS1_DATA_WIDTH	CONFIG_NETDCUA9_LVDS0_DATA_WIDTH
+#define CONFIG_NETDCUA9_LVDS1_DATA_WIDTH CONFIG_NETDCUA9_LVDS0_DATA_WIDTH
 #define CONFIG_NETDCUA9_LVDS1_TIMING	CONFIG_NETDCUA9_LVDS0_TIMING
 #ifndef CONFIG_NETDCUA9_LVDS_DUAL_MODE
 #define CONFIG_NETDCUA9_LVDS_DUAL_MODE
@@ -482,7 +484,7 @@
 	};
 };
 
-/* RAM size for Continues Memory Allocator; if not defined, use 320 MB */
+/* RAM size for Continuous Memory Allocator; if not defined, use 320 MB */
 #ifndef CONFIG_NETDCUA9_CMA_SIZE
 #define CONFIG_NETDCUA9_CMA_SIZE 0x14000000
 #endif
@@ -711,7 +713,7 @@
 	fus,skipblocks = <2>;
 	fus,chunk1k;
 	fus,ecc_strength = <8>;		/* Spare area 64 bytes */
-	//fus,ecc_strength = <40>;	/* Spare area 224 bytes */
+//###	fus,ecc_strength = <40>;	/* Spare area 224 bytes */
 	status = "okay";
 };
 #endif
@@ -944,41 +946,41 @@
 				/* VBL_ON on J12  */
 				MX6QDL_PAD_SD4_DAT0__GPIO2_IO08		0x13059
 				/* J5 ROW 0 - ROW 7, GPIO */
-				MX6QDL_PAD_EIM_A16__GPIO2_IO22		0x30b0
-				MX6QDL_PAD_EIM_A17__GPIO2_IO21		0x30b0
-				MX6QDL_PAD_EIM_A18__GPIO2_IO20		0x30b0
-				MX6QDL_PAD_EIM_A19__GPIO2_IO19		0x30b0
-				MX6QDL_PAD_EIM_A20__GPIO2_IO18		0x30b0
-				MX6QDL_PAD_EIM_A21__GPIO2_IO17		0x30b0
-				MX6QDL_PAD_EIM_A22__GPIO2_IO16		0x30b0
-				MX6QDL_PAD_EIM_A23__GPIO6_IO06		0x30b0
+				MX6QDL_PAD_EIM_A16__GPIO2_IO22		0x030b0
+				MX6QDL_PAD_EIM_A17__GPIO2_IO21		0x030b0
+				MX6QDL_PAD_EIM_A18__GPIO2_IO20		0x030b0
+				MX6QDL_PAD_EIM_A19__GPIO2_IO19		0x030b0
+				MX6QDL_PAD_EIM_A20__GPIO2_IO18		0x030b0
+				MX6QDL_PAD_EIM_A21__GPIO2_IO17		0x030b0
+				MX6QDL_PAD_EIM_A22__GPIO2_IO16		0x030b0
+				MX6QDL_PAD_EIM_A23__GPIO6_IO06		0x030b0
 				/* J5 COL 0 - COL 7, GPIO */
-				MX6QDL_PAD_EIM_A24__GPIO5_IO04		0x30b0
-				MX6QDL_PAD_EIM_A25__GPIO5_IO02		0x30b0
-				MX6QDL_PAD_EIM_EB2__GPIO2_IO30		0x30b0
-				MX6QDL_PAD_EIM_EB3__GPIO2_IO31		0x30b0
-				MX6QDL_PAD_EIM_BCLK__GPIO6_IO31		0x30b0
-				MX6QDL_PAD_EIM_WAIT__GPIO5_IO00		0x30b0
-				MX6QDL_PAD_EIM_EB0__GPIO2_IO28		0x30b0
-				MX6QDL_PAD_EIM_EB1__GPIO2_IO29		0x30b0
+				MX6QDL_PAD_EIM_A24__GPIO5_IO04		0x030b0
+				MX6QDL_PAD_EIM_A25__GPIO5_IO02		0x030b0
+				MX6QDL_PAD_EIM_EB2__GPIO2_IO30		0x030b0
+				MX6QDL_PAD_EIM_EB3__GPIO2_IO31		0x030b0
+				MX6QDL_PAD_EIM_BCLK__GPIO6_IO31		0x030b0
+				MX6QDL_PAD_EIM_WAIT__GPIO5_IO00		0x030b0
+				MX6QDL_PAD_EIM_EB0__GPIO2_IO28		0x030b0
+				MX6QDL_PAD_EIM_EB1__GPIO2_IO29		0x030b0
 				/* J5 KBINT */
-				MX6QDL_PAD_EIM_DA10__GPIO3_IO10		0x30b0
+				MX6QDL_PAD_EIM_DA10__GPIO3_IO10		0x030b0
 				/* DVS */
-				MX6QDL_PAD_EIM_DA13__GPIO3_IO13		0x0
+				MX6QDL_PAD_EIM_DA13__GPIO3_IO13		0x00000
 				/* LCD DEN */
 				MX6QDL_PAD_CSI0_DATA_EN__GPIO5_IO20	0x1b0b0
 				/* IRQ1 for SX8654 and WM9715 (ADC) */
-				MX6QDL_PAD_EIM_DA5__GPIO3_IO05		0x30b0
+				MX6QDL_PAD_EIM_DA5__GPIO3_IO05		0x030b0
 				/* IRQ2 for ADS1015 and WM9715 (GENIRQ) */
-				MX6QDL_PAD_EIM_DA6__GPIO3_IO06		0x30b0
+				MX6QDL_PAD_EIM_DA6__GPIO3_IO06		0x030b0
 				/* IRQ3 for WM9715 (PENDOWN) */
-				MX6QDL_PAD_EIM_DA7__GPIO3_IO07		0x30b0
+				MX6QDL_PAD_EIM_DA7__GPIO3_IO07		0x030b0
 				/* RTC_IRQ */
-				MX6QDL_PAD_ENET_REF_CLK__GPIO1_IO23	0xb0b0
+				MX6QDL_PAD_ENET_REF_CLK__GPIO1_IO23	0x0b0b0
 				/* I2C2 IRQ */
-				MX6QDL_PAD_GPIO_7__GPIO1_IO07		0xb0b0
+				MX6QDL_PAD_GPIO_7__GPIO1_IO07		0x0b0b0
 				/* I2C2 RST */
-				MX6QDL_PAD_GPIO_8__GPIO1_IO08		0xb0b0
+				MX6QDL_PAD_GPIO_8__GPIO1_IO08		0x0b0b0
 			>;
 		};
 
@@ -986,21 +988,21 @@
 		/* Pins already set in bootloader */
 		pinctrl_gpmi_nand_1: gpmi-nand-1 {
 			fsl,pins = <
-				MX6QDL_PAD_NANDF_CLE__NAND_CLE		0xb0b1
-				MX6QDL_PAD_NANDF_ALE__NAND_ALE		0xb0b1
-				MX6QDL_PAD_NANDF_WP_B__NAND_WP_B	0xb0b1
-				MX6QDL_PAD_NANDF_RB0__NAND_READY_B	0xb000
-				MX6QDL_PAD_NANDF_CS0__NAND_CE0_B	0xb0b1
-				MX6QDL_PAD_SD4_CMD__NAND_RE_B		0xb0b1
-				MX6QDL_PAD_SD4_CLK__NAND_WE_B		0xb0b1
-				MX6QDL_PAD_NANDF_D0__NAND_DATA00	0xb0b1
-				MX6QDL_PAD_NANDF_D1__NAND_DATA01	0xb0b1
-				MX6QDL_PAD_NANDF_D2__NAND_DATA02	0xb0b1
-				MX6QDL_PAD_NANDF_D3__NAND_DATA03	0xb0b1
-				MX6QDL_PAD_NANDF_D4__NAND_DATA04	0xb0b1
-				MX6QDL_PAD_NANDF_D5__NAND_DATA05	0xb0b1
-				MX6QDL_PAD_NANDF_D6__NAND_DATA06	0xb0b1
-				MX6QDL_PAD_NANDF_D7__NAND_DATA07	0xb0b1
+				MX6QDL_PAD_NANDF_CLE__NAND_CLE		0x0b0b1
+				MX6QDL_PAD_NANDF_ALE__NAND_ALE		0x0b0b1
+				MX6QDL_PAD_NANDF_WP_B__NAND_WP_B	0x0b0b1
+				MX6QDL_PAD_NANDF_RB0__NAND_READY_B	0x0b000
+				MX6QDL_PAD_NANDF_CS0__NAND_CE0_B	0x0b0b1
+				MX6QDL_PAD_SD4_CMD__NAND_RE_B		0x0b0b1
+				MX6QDL_PAD_SD4_CLK__NAND_WE_B		0x0b0b1
+				MX6QDL_PAD_NANDF_D0__NAND_DATA00	0x0b0b1
+				MX6QDL_PAD_NANDF_D1__NAND_DATA01	0x0b0b1
+				MX6QDL_PAD_NANDF_D2__NAND_DATA02	0x0b0b1
+				MX6QDL_PAD_NANDF_D3__NAND_DATA03	0x0b0b1
+				MX6QDL_PAD_NANDF_D4__NAND_DATA04	0x0b0b1
+				MX6QDL_PAD_NANDF_D5__NAND_DATA05	0x0b0b1
+				MX6QDL_PAD_NANDF_D6__NAND_DATA06	0x0b0b1
+				MX6QDL_PAD_NANDF_D7__NAND_DATA07	0x0b0b1
 			>;
 		};
 #endif
@@ -1090,38 +1092,38 @@
 		pinctrl_ax88796: ax88796grp {
 			fsl,pins = <
 				/* AX88796B Ethernet 2 */
-				MX6QDL_PAD_EIM_OE__EIM_OE_B 		0x00b0
-				MX6QDL_PAD_EIM_CS1__EIM_CS1_B		0x00b0
-				MX6QDL_PAD_EIM_RW__EIM_RW		0x00b0
+				MX6QDL_PAD_EIM_OE__EIM_OE_B 		0x000b0
+				MX6QDL_PAD_EIM_CS1__EIM_CS1_B		0x000b0
+				MX6QDL_PAD_EIM_RW__EIM_RW		0x000b0
 				/* AX88796B Ethernet 2 IRQ */
-				MX6QDL_PAD_EIM_DA14__GPIO3_IO14		0xb0b0
-				MX6QDL_PAD_EIM_DA15__GPIO3_IO15		0x30b0
+				MX6QDL_PAD_EIM_DA14__GPIO3_IO14		0x0b0b0
+				MX6QDL_PAD_EIM_DA15__GPIO3_IO15		0x030b0
 				/* AX88796B Ethernet 2 RESET */
-				MX6QDL_PAD_GPIO_3__GPIO1_IO03		0xb0b0
+				MX6QDL_PAD_GPIO_3__GPIO1_IO03		0x0b0b0
 				/* AX88796B Ethernet 2 - EIM_A */
-				MX6QDL_PAD_EIM_DA0__EIM_AD00		0xb0b0
-				MX6QDL_PAD_EIM_DA1__EIM_AD01		0xb0b0
-				MX6QDL_PAD_EIM_DA2__EIM_AD02		0xb0b0
-				MX6QDL_PAD_EIM_DA3__EIM_AD03		0xb0b0
-				MX6QDL_PAD_EIM_DA4__EIM_AD04		0xb0b0
-				MX6QDL_PAD_EIM_DA12__EIM_AD12		0xb0b0
+				MX6QDL_PAD_EIM_DA0__EIM_AD00		0x0b0b0
+				MX6QDL_PAD_EIM_DA1__EIM_AD01		0x0b0b0
+				MX6QDL_PAD_EIM_DA2__EIM_AD02		0x0b0b0
+				MX6QDL_PAD_EIM_DA3__EIM_AD03		0x0b0b0
+				MX6QDL_PAD_EIM_DA4__EIM_AD04		0x0b0b0
+				MX6QDL_PAD_EIM_DA12__EIM_AD12		0x0b0b0
 				/* AX88796B Ethernet 2 - EIM_D & PIFDATA */
-				MX6QDL_PAD_EIM_D16__EIM_DATA16		0xb0b0
-				MX6QDL_PAD_EIM_D17__EIM_DATA17		0xb0b0
-				MX6QDL_PAD_EIM_D18__EIM_DATA18		0xb0b0
-				MX6QDL_PAD_EIM_D19__EIM_DATA19		0xb0b0
-				MX6QDL_PAD_EIM_D20__EIM_DATA20		0xb0b0
-				MX6QDL_PAD_EIM_D21__EIM_DATA21		0xb0b0
-				MX6QDL_PAD_EIM_D22__EIM_DATA22		0xb0b0
-				MX6QDL_PAD_EIM_D23__EIM_DATA23		0xb0b0
-				MX6QDL_PAD_EIM_D24__EIM_DATA24		0xb0b0
-				MX6QDL_PAD_EIM_D25__EIM_DATA25		0xb0b0
-				MX6QDL_PAD_EIM_D26__EIM_DATA26		0xb0b0
-				MX6QDL_PAD_EIM_D27__EIM_DATA27		0xb0b0
-				MX6QDL_PAD_EIM_D28__EIM_DATA28		0xb0b0
-				MX6QDL_PAD_EIM_D29__EIM_DATA29		0xb0b0
-				MX6QDL_PAD_EIM_D30__EIM_DATA30		0xb0b0
-				MX6QDL_PAD_EIM_D31__EIM_DATA31		0xb0b0
+				MX6QDL_PAD_EIM_D16__EIM_DATA16		0x0b0b0
+				MX6QDL_PAD_EIM_D17__EIM_DATA17		0x0b0b0
+				MX6QDL_PAD_EIM_D18__EIM_DATA18		0x0b0b0
+				MX6QDL_PAD_EIM_D19__EIM_DATA19		0x0b0b0
+				MX6QDL_PAD_EIM_D20__EIM_DATA20		0x0b0b0
+				MX6QDL_PAD_EIM_D21__EIM_DATA21		0x0b0b0
+				MX6QDL_PAD_EIM_D22__EIM_DATA22		0x0b0b0
+				MX6QDL_PAD_EIM_D23__EIM_DATA23		0x0b0b0
+				MX6QDL_PAD_EIM_D24__EIM_DATA24		0x0b0b0
+				MX6QDL_PAD_EIM_D25__EIM_DATA25		0x0b0b0
+				MX6QDL_PAD_EIM_D26__EIM_DATA26		0x0b0b0
+				MX6QDL_PAD_EIM_D27__EIM_DATA27		0x0b0b0
+				MX6QDL_PAD_EIM_D28__EIM_DATA28		0x0b0b0
+				MX6QDL_PAD_EIM_D29__EIM_DATA29		0x0b0b0
+				MX6QDL_PAD_EIM_D30__EIM_DATA30		0x0b0b0
+				MX6QDL_PAD_EIM_D31__EIM_DATA31		0x0b0b0
 			>;
 		};
 
@@ -1199,7 +1201,7 @@
 			fsl,pins = <
 #ifdef CONFIG_NETDCUA9_OTG_HOST
 				/* USB_OTG_PWR */
-				MX6QDL_PAD_GPIO_9__GPIO1_IO09	 	0x03030
+				MX6QDL_PAD_GPIO_9__GPIO1_IO09		0x03030
 #endif
 			>;
 		};
@@ -1241,7 +1243,7 @@
 				/* SD1_CD pin */
 				MX6QDL_PAD_GPIO_1__GPIO1_IO01		0x17059
 				/* SD2_WP pin */
-				MX6QDL_PAD_DI0_PIN4__GPIO4_IO20		0xb060
+				MX6QDL_PAD_DI0_PIN4__GPIO4_IO20		0x0b060
 			>;
 		};
 #endif /* CONFIG_NETDCUA9_SD_A */
