--- a/arch/arm/boot/dts/picocom1.2.dts
+++ b/arch/arm/boot/dts/picocom1.2.dts
@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2016 F&S Elektronik Systeme GmbH
+ * Copyright (C) 2016-2017 F&S Elektronik Systeme GmbH
  *
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License version 2 as
@@ -551,18 +551,18 @@ else
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_hog_1>;
 	picocom1_2 {
-	
+
 		pinctrl_hog_1: hoggrp-1 {
 				fsl,pins = <
 /*###*/				MX6UL_PAD_JTAG_TMS__CCM_CLKO1		0x17088
- 				MX6UL_PAD_LCD_DATA00__SAI1_MCLK 	0x17088
- 				//MX6UL_PAD_SNVS_TAMPER7__GPIO5_IO07	0xb0b0
- 				/* GPIO1 - GPIO5 */
- 				MX6UL_PAD_LCD_DATA12__GPIO3_IO17	0x30b0
- 				MX6UL_PAD_LCD_DATA13__GPIO3_IO18	0x30b0
- 				MX6UL_PAD_LCD_DATA14__GPIO3_IO19	0x30b0
- 				MX6UL_PAD_LCD_DATA15__GPIO3_IO20	0x30b0
- 				MX6UL_PAD_LCD_DATA07__GPIO3_IO12	0x30b0
+				MX6UL_PAD_LCD_DATA00__SAI1_MCLK		0x17088
+				//MX6UL_PAD_SNVS_TAMPER7__GPIO5_IO07	0x0b0b0
+				/* GPIO1 - GPIO5 */
+				MX6UL_PAD_LCD_DATA12__GPIO3_IO17	0x030b0
+				MX6UL_PAD_LCD_DATA13__GPIO3_IO18	0x030b0
+				MX6UL_PAD_LCD_DATA14__GPIO3_IO19	0x030b0
+				MX6UL_PAD_LCD_DATA15__GPIO3_IO20	0x030b0
+				MX6UL_PAD_LCD_DATA07__GPIO3_IO12	0x030b0
 			>;
 
 };
@@ -580,9 +580,9 @@ else
 				MX6UL_PAD_ENET1_RX_DATA1__ENET1_RDATA01	0x1b0b0
 				MX6UL_PAD_ENET1_RX_DATA0__ENET1_RDATA00	0x1b0b0
 				MX6UL_PAD_ENET1_TX_EN__ENET1_TX_EN	0x1b0b0
-				MX6UL_PAD_ENET1_TX_DATA1__ENET1_TDATA01 0x1b0b0
-				MX6UL_PAD_ENET1_TX_DATA0__ENET1_TDATA00 0x1b0b0
-				MX6UL_PAD_ENET1_TX_CLK__ENET1_REF_CLK1 	0x4001b0b0
+				MX6UL_PAD_ENET1_TX_DATA1__ENET1_TDATA01	0x1b0b0
+				MX6UL_PAD_ENET1_TX_DATA0__ENET1_TDATA00	0x1b0b0
+				MX6UL_PAD_ENET1_TX_CLK__ENET1_REF_CLK1	0x4001b0b0
 
 				/* phy reset */
 				MX6UL_PAD_BOOT_MODE1__GPIO5_IO11	0x0b0b0
@@ -592,8 +592,8 @@ else
 
 		pinctrl_flexcan1: flexcan1grp{
 			fsl,pins = <
-				MX6UL_PAD_LCD_DATA08__FLEXCAN1_TX 	0x1b020
-				MX6UL_PAD_LCD_DATA09__FLEXCAN1_RX 	0x1b020
+				MX6UL_PAD_LCD_DATA08__FLEXCAN1_TX	0x1b020
+				MX6UL_PAD_LCD_DATA09__FLEXCAN1_RX	0x1b020
 			>;
 		};
 
@@ -625,16 +625,16 @@ else
 #elif CONFIG_PICOCOM1_2_ADC
 		pinctrl_adc1: adc1grp {
 			fsl,pins = <
-				MX6UL_PAD_GPIO1_IO05__GPIO1_IO05 	0xb0
-				MX6UL_PAD_GPIO1_IO08__GPIO1_IO08 	0xb0
-				MX6UL_PAD_GPIO1_IO09__GPIO1_IO09 	0xb0
+				MX6UL_PAD_GPIO1_IO05__GPIO1_IO05	0x000b0
+				MX6UL_PAD_GPIO1_IO08__GPIO1_IO08	0x000b0
+				MX6UL_PAD_GPIO1_IO09__GPIO1_IO09	0x000b0
 			>;
 		};
 #endif
 
 pinctrl_pwm3: pwm3grp {
 			fsl,pins = <
-				MX6UL_PAD_GPIO1_IO04__PWM3_OUT 		0x110b0
+				MX6UL_PAD_GPIO1_IO04__PWM3_OUT		0x110b0
 			>;
 		};
 
@@ -654,8 +654,8 @@ pinctrl_pwm3: pwm3grp {
 			fsl,pins = <
 				MX6UL_PAD_UART2_TX_DATA__UART2_DCE_TX	0x1b0b1
 				MX6UL_PAD_UART2_RX_DATA__UART2_DCE_RX	0x1b0b1
-				MX6UL_PAD_UART2_RTS_B__UART2_DTE_CTS 	0x1b0b1
-				MX6UL_PAD_UART2_CTS_B__UART2_DTE_RTS 	0x1b0b1
+				MX6UL_PAD_UART2_RTS_B__UART2_DTE_CTS	0x1b0b1
+				MX6UL_PAD_UART2_CTS_B__UART2_DTE_RTS	0x1b0b1
 			>;
 		};
 
@@ -663,14 +663,14 @@ pinctrl_pwm3: pwm3grp {
 			fsl,pins = <
 				MX6UL_PAD_UART3_TX_DATA__UART3_DCE_TX	0x1b0b1
 				MX6UL_PAD_UART3_RX_DATA__UART3_DCE_RX	0x1b0b1
-				MX6UL_PAD_UART3_RTS_B__UART3_DTE_CTS 	0x1b0b1
-				MX6UL_PAD_UART3_CTS_B__UART3_DTE_RTS 	0x1b0b1
+				MX6UL_PAD_UART3_RTS_B__UART3_DTE_CTS	0x1b0b1
+				MX6UL_PAD_UART3_CTS_B__UART3_DTE_RTS	0x1b0b1
 			>;
 		};
 
 		pinctrl_uart4: uart4grp {
 			fsl,pins = <
-				MX6UL_PAD_LCD_CLK__UART4_DCE_TX 	0x1b0b1
+				MX6UL_PAD_LCD_CLK__UART4_DCE_TX		0x1b0b1
 				MX6UL_PAD_LCD_ENABLE__UART4_DCE_RX	0x1b0b1
 				MX6UL_PAD_LCD_HSYNC__UART4_DTE_RTS	0x1b0b1
 				MX6UL_PAD_LCD_VSYNC__UART4_DTE_CTS	0x1b0b1
@@ -681,7 +681,8 @@ pinctrl_pwm3: pwm3grp {
 			fsl,pins = <
 				/* USB_OTG1_PWR, active high */
 //###				MX6UL_PAD_ENET2_RX_DATA0__GPIO2_IO08	0x030b0
-				MX6UL_PAD_ENET2_RX_DATA0__USB_OTG1_PWR	0x030b0			>;
+				MX6UL_PAD_ENET2_RX_DATA0__USB_OTG1_PWR	0x030b0
+			>;
 		};
 
 		pinctrl_usb_otg2: usb_otg2grp {
@@ -696,7 +697,7 @@ pinctrl_pwm3: pwm3grp {
 		pinctrl_uart5: uart5grp {
 			fsl,pins = <
 				MX6UL_PAD_CSI_DATA00__UART5_DCE_TX	0x1b0b1
-				MX6UL_PAD_CSI_DATA01__UART5_DCE_RX 	0x1b0b1
+				MX6UL_PAD_CSI_DATA01__UART5_DCE_RX	0x1b0b1
 				MX6UL_PAD_CSI_DATA02__UART5_DTE_CTS	0x1b0b1
 				MX6UL_PAD_CSI_DATA03__UART5_DTE_RTS	0x1b0b1
 			>;
@@ -714,7 +715,7 @@ pinctrl_pwm3: pwm3grp {
 
 		pinctrl_uart7: uart7grp {
 			fsl,pins = <
-				MX6UL_PAD_LCD_DATA16__UART7_DCE_TX 	0x1b0b1
+				MX6UL_PAD_LCD_DATA16__UART7_DCE_TX	0x1b0b1
 				MX6UL_PAD_LCD_DATA17__UART7_DCE_RX	0x1b0b1
 			>;
 		};
@@ -775,14 +776,14 @@ pinctrl_pwm3: pwm3grp {
 		pinctrl_i2c1: i2c1grp {
 			fsl,pins = <
 				MX6UL_PAD_UART4_TX_DATA__I2C1_SCL	0x4001b8b0
-				MX6UL_PAD_UART4_RX_DATA__I2C1_SDA 	0x4001b8b0
+				MX6UL_PAD_UART4_RX_DATA__I2C1_SDA	0x4001b8b0
 			>;
 		};
 
 		pinctrl_i2c2: i2c2grp {
 			fsl,pins = <
-				MX6UL_PAD_UART5_TX_DATA__I2C2_SCL 	0x4001b8b0
-				MX6UL_PAD_UART5_RX_DATA__I2C2_SDA 	0x4001b8b0
+				MX6UL_PAD_UART5_TX_DATA__I2C2_SCL	0x4001b8b0
+				MX6UL_PAD_UART5_RX_DATA__I2C2_SDA	0x4001b8b0
 			>;
 		};
 
@@ -790,18 +791,17 @@ pinctrl_pwm3: pwm3grp {
 			fsl,pins = <
 				MX6UL_PAD_SNVS_TAMPER9__GPIO5_IO09	0x4001b0b0
 				MX6UL_PAD_SNVS_TAMPER8__GPIO5_IO08	0x4001b0b0
-				MX6UL_PAD_SNVS_TAMPER7__GPIO5_IO07      0x4001b0b0
+				MX6UL_PAD_SNVS_TAMPER7__GPIO5_IO07	0x4001b0b0
 			>;
 		};
 
 		pinctrl_sai1: sai1grp {
 			fsl,pins = <
-				//MX6UL_PAD_LCD_DATA00__SAI1_MCLK 	0x17088
-				MX6UL_PAD_LCD_DATA01__SAI1_TX_SYNC 	0x17088
-				MX6UL_PAD_LCD_DATA02__SAI1_TX_BCLK 	0x17088
-				MX6UL_PAD_LCD_DATA03__SAI1_RX_DATA 	0x17088
-				MX6UL_PAD_LCD_DATA04__SAI1_TX_DATA      0x17088
-
+				//MX6UL_PAD_LCD_DATA00__SAI1_MCLK	0x17088
+				MX6UL_PAD_LCD_DATA01__SAI1_TX_SYNC	0x17088
+				MX6UL_PAD_LCD_DATA02__SAI1_TX_BCLK	0x17088
+				MX6UL_PAD_LCD_DATA03__SAI1_RX_DATA	0x17088
+				MX6UL_PAD_LCD_DATA04__SAI1_TX_DATA	0x17088
 			>;
 		};
 
@@ -832,10 +832,10 @@ pinctrl_pwm3: pwm3grp {
 
 		pinctrl_ecspi2: ecspi2grp {
 			fsl,pins = <
-				MX6UL_PAD_CSI_DATA00__ECSPI2_SCLK 	0x100b1
-				MX6UL_PAD_CSI_DATA01__GPIO4_IO22 	0x80000000
-				MX6UL_PAD_CSI_DATA02__ECSPI2_MOSI 	0x100b1
-				MX6UL_PAD_CSI_DATA03__ECSPI2_MISO  	0x100b1
+				MX6UL_PAD_CSI_DATA00__ECSPI2_SCLK	0x100b1
+				MX6UL_PAD_CSI_DATA01__GPIO4_IO22	0x80000000
+				MX6UL_PAD_CSI_DATA02__ECSPI2_MOSI	0x100b1
+				MX6UL_PAD_CSI_DATA03__ECSPI2_MISO	0x100b1
 			>;
 		};
 
@@ -844,22 +844,22 @@ pinctrl_pwm3: pwm3grp {
 		pinctrl_gpmi_nand_1: gpmi-nand-1 {
 			/* Already configured in NBoot/U-Boot */
 			fsl,pins = <
-				MX6UL_PAD_NAND_CLE__RAWNAND_CLE		0xb0b1
-				MX6UL_PAD_NAND_ALE__RAWNAND_ALE		0xb0b1
-				MX6UL_PAD_NAND_WP_B__RAWNAND_WP_B	0xb0b1
-				MX6UL_PAD_NAND_READY_B__RAWNAND_READY_B	0xb000
-				MX6UL_PAD_NAND_CE0_B__RAWNAND_CE0_B	0xb0b1
-				//MX6UL_PAD_NAND_CE1_B__RAWNAND_CE1_B	0xb0b1
-				MX6UL_PAD_NAND_RE_B__RAWNAND_RE_B	0xb0b1
-				MX6UL_PAD_NAND_WE_B__RAWNAND_WE_B	0xb0b1
-				MX6UL_PAD_NAND_DATA00__RAWNAND_DATA00	0xb0b1
-				MX6UL_PAD_NAND_DATA01__RAWNAND_DATA01	0xb0b1
-				MX6UL_PAD_NAND_DATA02__RAWNAND_DATA02	0xb0b1
-				MX6UL_PAD_NAND_DATA03__RAWNAND_DATA03	0xb0b1
-				MX6UL_PAD_NAND_DATA04__RAWNAND_DATA04	0xb0b1
-				MX6UL_PAD_NAND_DATA05__RAWNAND_DATA05	0xb0b1
-				MX6UL_PAD_NAND_DATA06__RAWNAND_DATA06	0xb0b1
-				MX6UL_PAD_NAND_DATA07__RAWNAND_DATA07	0xb0b1
+				MX6UL_PAD_NAND_CLE__RAWNAND_CLE		0x0b0b1
+				MX6UL_PAD_NAND_ALE__RAWNAND_ALE		0x0b0b1
+				MX6UL_PAD_NAND_WP_B__RAWNAND_WP_B	0x0b0b1
+				MX6UL_PAD_NAND_READY_B__RAWNAND_READY_B	0x0b000
+				MX6UL_PAD_NAND_CE0_B__RAWNAND_CE0_B	0x0b0b1
+				//MX6UL_PAD_NAND_CE1_B__RAWNAND_CE1_B	0x0b0b1
+				MX6UL_PAD_NAND_RE_B__RAWNAND_RE_B	0x0b0b1
+				MX6UL_PAD_NAND_WE_B__RAWNAND_WE_B	0x0b0b1
+				MX6UL_PAD_NAND_DATA00__RAWNAND_DATA00	0x0b0b1
+				MX6UL_PAD_NAND_DATA01__RAWNAND_DATA01	0x0b0b1
+				MX6UL_PAD_NAND_DATA02__RAWNAND_DATA02	0x0b0b1
+				MX6UL_PAD_NAND_DATA03__RAWNAND_DATA03	0x0b0b1
+				MX6UL_PAD_NAND_DATA04__RAWNAND_DATA04	0x0b0b1
+				MX6UL_PAD_NAND_DATA05__RAWNAND_DATA05	0x0b0b1
+				MX6UL_PAD_NAND_DATA06__RAWNAND_DATA06	0x0b0b1
+				MX6UL_PAD_NAND_DATA07__RAWNAND_DATA07	0x0b0b1
 			>;
 		};
 #endif
@@ -867,8 +867,8 @@ pinctrl_pwm3: pwm3grp {
 
 		pinctrl_status_leds: ledgrp {
 			fsl,pins = <
-				MX6UL_PAD_SNVS_TAMPER0__GPIO5_IO00	0x30b0
-				MX6UL_PAD_SNVS_TAMPER1__GPIO5_IO01	0x30b0
+				MX6UL_PAD_SNVS_TAMPER0__GPIO5_IO00	0x030b0
+				MX6UL_PAD_SNVS_TAMPER1__GPIO5_IO01	0x030b0
 			>;
 		};
 	};
