--- a/arch/arm/boot/dts/qblissa9qdl.dtsi
+++ b/arch/arm/boot/dts/qblissa9qdl.dtsi
@@ -1,5 +1,5 @@
 /*
- * Copyright 2016 F&S Elektronik Systeme GmbH
+ * Copyright 2016-2017 F&S Elektronik Systeme GmbH
  *
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License version 2 as
@@ -242,8 +242,7 @@
 
 #ifdef CONFIG_QBLISSA9_HDMI_AUDIO
 	sound-hdmi {
-		compatible = "fsl,imx6q-audio-hdmi",
-			"fsl,imx-audio-hdmi";
+		compatible = "fsl,imx6q-audio-hdmi", "fsl,imx-audio-hdmi";
 		model = "imx-audio-hdmi";
 		hdmi-controller = <&hdmi_audio>;
 	};
@@ -1013,57 +1012,57 @@
 		pinctrl_hog_1: hoggrp-1 {
 			fsl,pins = <
 				/* WDOG1 */
-				MX6QDL_PAD_GPIO_9__WDOG1_B		0xb0b0
+				MX6QDL_PAD_GPIO_9__WDOG1_B		0x0b0b0
 				/* RTC_IRQ */
-				MX6QDL_PAD_ENET_TX_EN__GPIO1_IO28	0xb0b0
-				MX6QDL_PAD_EIM_WAIT__GPIO5_IO00		0x30b0
-				MX6QDL_PAD_EIM_A18__GPIO2_IO20		0x30b0
-				MX6QDL_PAD_EIM_EB0__GPIO2_IO28		0x30b0
-				MX6QDL_PAD_EIM_EB1__GPIO2_IO29		0x30b0
-				MX6QDL_PAD_EIM_DA0__GPIO3_IO00		0x30b0
-				MX6QDL_PAD_EIM_DA1__GPIO3_IO01		0x30b0
-				MX6QDL_PAD_EIM_DA2__GPIO3_IO02		0x30b0
-				MX6QDL_PAD_EIM_DA3__GPIO3_IO03		0x30b0
-				MX6QDL_PAD_EIM_DA4__GPIO3_IO04		0x30b0
-				MX6QDL_PAD_EIM_DA5__GPIO3_IO05		0x30b0
-				MX6QDL_PAD_EIM_DA6__GPIO3_IO06		0x30b0
-				MX6QDL_PAD_EIM_DA7__GPIO3_IO07		0x30b0
-				MX6QDL_PAD_EIM_DA8__GPIO3_IO08		0x30b0
-				MX6QDL_PAD_EIM_DA9__GPIO3_IO09		0x30b0
-				MX6QDL_PAD_EIM_DA10__GPIO3_IO10		0x30b0
-				MX6QDL_PAD_EIM_DA11__GPIO3_IO11		0x30b0
-				MX6QDL_PAD_EIM_DA12__GPIO3_IO12		0x30b0
-				MX6QDL_PAD_EIM_DA13__GPIO3_IO13		0x30b0
-				MX6QDL_PAD_EIM_DA14__GPIO3_IO14		0x30b0
-				MX6QDL_PAD_EIM_DA15__GPIO3_IO15		0x30b0
+				MX6QDL_PAD_ENET_TX_EN__GPIO1_IO28	0x0b0b0
+				MX6QDL_PAD_EIM_WAIT__GPIO5_IO00		0x030b0
+				MX6QDL_PAD_EIM_A18__GPIO2_IO20		0x030b0
+				MX6QDL_PAD_EIM_EB0__GPIO2_IO28		0x030b0
+				MX6QDL_PAD_EIM_EB1__GPIO2_IO29		0x030b0
+				MX6QDL_PAD_EIM_DA0__GPIO3_IO00		0x030b0
+				MX6QDL_PAD_EIM_DA1__GPIO3_IO01		0x030b0
+				MX6QDL_PAD_EIM_DA2__GPIO3_IO02		0x030b0
+				MX6QDL_PAD_EIM_DA3__GPIO3_IO03		0x030b0
+				MX6QDL_PAD_EIM_DA4__GPIO3_IO04		0x030b0
+				MX6QDL_PAD_EIM_DA5__GPIO3_IO05		0x030b0
+				MX6QDL_PAD_EIM_DA6__GPIO3_IO06		0x030b0
+				MX6QDL_PAD_EIM_DA7__GPIO3_IO07		0x030b0
+				MX6QDL_PAD_EIM_DA8__GPIO3_IO08		0x030b0
+				MX6QDL_PAD_EIM_DA9__GPIO3_IO09		0x030b0
+				MX6QDL_PAD_EIM_DA10__GPIO3_IO10		0x030b0
+				MX6QDL_PAD_EIM_DA11__GPIO3_IO11		0x030b0
+				MX6QDL_PAD_EIM_DA12__GPIO3_IO12		0x030b0
+				MX6QDL_PAD_EIM_DA13__GPIO3_IO13		0x030b0
+				MX6QDL_PAD_EIM_DA14__GPIO3_IO14		0x030b0
+				MX6QDL_PAD_EIM_DA15__GPIO3_IO15		0x030b0
 				/* SLEEP S5*/
-				MX6QDL_PAD_KEY_COL2__GPIO4_IO10		0xb0b0
+				MX6QDL_PAD_KEY_COL2__GPIO4_IO10		0x0b0b0
 				/* SUSPEND */
-				MX6QDL_PAD_KEY_ROW2__GPIO4_IO11		0xb0b0
+				MX6QDL_PAD_KEY_ROW2__GPIO4_IO11		0x0b0b0
 				/* DIGON */
-				MX6QDL_PAD_SD4_DAT3__GPIO2_IO11		0x30b0
+				MX6QDL_PAD_SD4_DAT3__GPIO2_IO11		0x030b0
 				/* LDDC_DATA */
-				MX6QDL_PAD_SD4_DAT4__GPIO2_IO12		0x30b0
+				MX6QDL_PAD_SD4_DAT4__GPIO2_IO12		0x030b0
 				/* LDDC_CLK */
-				MX6QDL_PAD_SD4_DAT5__GPIO2_IO13		0x30b0
+				MX6QDL_PAD_SD4_DAT5__GPIO2_IO13		0x030b0
 				/* FAN_TACHOIN */
-				MX6QDL_PAD_GPIO_2__GPIO1_IO02		0x30b0
+				MX6QDL_PAD_GPIO_2__GPIO1_IO02		0x030b0
 				/* LID_BTNJ */
-				MX6QDL_PAD_GPIO_4__GPIO1_IO04		0x30b0
+				MX6QDL_PAD_GPIO_4__GPIO1_IO04		0x030b0
 				/* SLP_BTNJ */
-				MX6QDL_PAD_GPIO_5__GPIO1_IO05		0x30b0
+				MX6QDL_PAD_GPIO_5__GPIO1_IO05		0x030b0
 				/* BATLOWJ */
-				MX6QDL_PAD_GPIO_6__GPIO1_IO06		0x30b0
+				MX6QDL_PAD_GPIO_6__GPIO1_IO06		0x030b0
 				/* THRMn */
-				MX6QDL_PAD_GPIO_7__GPIO1_IO07		0xb0b0
+				MX6QDL_PAD_GPIO_7__GPIO1_IO07		0x0b0b0
 				/* WAKEJ_EXT */
-				MX6QDL_PAD_GPIO_8__GPIO1_IO08		0x30b0
+				MX6QDL_PAD_GPIO_8__GPIO1_IO08		0x030b0
 				/* WDOUT_ENn */
-				MX6QDL_PAD_GPIO_9__GPIO1_IO09		0xb0b0
+				MX6QDL_PAD_GPIO_9__GPIO1_IO09		0x0b0b0
 				/* ATA_ACTn */
-				MX6QDL_PAD_GPIO_18__GPIO7_IO13		0xb0b0
+				MX6QDL_PAD_GPIO_18__GPIO7_IO13		0x0b0b0
 				/* BACKLIGHT_On */
-				MX6QDL_PAD_SD4_DAT0__GPIO2_IO08		0x30b0
+				MX6QDL_PAD_SD4_DAT0__GPIO2_IO08		0x030b0
 			>;
 		};
 
@@ -1071,21 +1070,21 @@
 #if 0
 		pinctrl_gpmi_nand_1: gpmi-nand-1 {
 			fsl,pins = <
-				MX6QDL_PAD_NANDF_CLE__NAND_CLE		0xb0b1
-				MX6QDL_PAD_NANDF_ALE__NAND_ALE		0xb0b1
-				MX6QDL_PAD_NANDF_WP_B__NAND_WP_B	0xb0b1
-				MX6QDL_PAD_NANDF_RB0__NAND_READY_B	0xb000
-				MX6QDL_PAD_NANDF_CS0__NAND_CE0_B	0xb0b1
-				MX6QDL_PAD_SD4_CMD__NAND_RE_B		0xb0b1
-				MX6QDL_PAD_SD4_CLK__NAND_WE_B		0xb0b1
-				MX6QDL_PAD_NANDF_D0__NAND_DATA00	0xb0b1
-				MX6QDL_PAD_NANDF_D1__NAND_DATA01	0xb0b1
-				MX6QDL_PAD_NANDF_D2__NAND_DATA02	0xb0b1
-				MX6QDL_PAD_NANDF_D3__NAND_DATA03	0xb0b1
-				MX6QDL_PAD_NANDF_D4__NAND_DATA04	0xb0b1
-				MX6QDL_PAD_NANDF_D5__NAND_DATA05	0xb0b1
-				MX6QDL_PAD_NANDF_D6__NAND_DATA06	0xb0b1
-				MX6QDL_PAD_NANDF_D7__NAND_DATA07	0xb0b1
+				MX6QDL_PAD_NANDF_CLE__NAND_CLE		0x0b0b1
+				MX6QDL_PAD_NANDF_ALE__NAND_ALE		0x0b0b1
+				MX6QDL_PAD_NANDF_WP_B__NAND_WP_B	0x0b0b1
+				MX6QDL_PAD_NANDF_RB0__NAND_READY_B	0x0b000
+				MX6QDL_PAD_NANDF_CS0__NAND_CE0_B	0x0b0b1
+				MX6QDL_PAD_SD4_CMD__NAND_RE_B		0x0b0b1
+				MX6QDL_PAD_SD4_CLK__NAND_WE_B		0x0b0b1
+				MX6QDL_PAD_NANDF_D0__NAND_DATA00	0x0b0b1
+				MX6QDL_PAD_NANDF_D1__NAND_DATA01	0x0b0b1
+				MX6QDL_PAD_NANDF_D2__NAND_DATA02	0x0b0b1
+				MX6QDL_PAD_NANDF_D3__NAND_DATA03	0x0b0b1
+				MX6QDL_PAD_NANDF_D4__NAND_DATA04	0x0b0b1
+				MX6QDL_PAD_NANDF_D5__NAND_DATA05	0x0b0b1
+				MX6QDL_PAD_NANDF_D6__NAND_DATA06	0x0b0b1
+				MX6QDL_PAD_NANDF_D7__NAND_DATA07	0x0b0b1
 			>;
 		};
 #endif
@@ -1189,7 +1188,7 @@
 				MX6QDL_PAD_EIM_D21__USB_OTG_OC		0x1b000
 #endif
 				/* USB_OTG_ID: low: host, open: device */
-				MX6QDL_PAD_ENET_RX_ER__USB_OTG_ID 	0x1b000
+				MX6QDL_PAD_ENET_RX_ER__USB_OTG_ID	0x1b000
 			>;
 		};
 
@@ -1268,9 +1267,9 @@
 				MX6QDL_PAD_SD1_DAT2__SD1_DATA2		0x17059
 				MX6QDL_PAD_SD1_DAT3__SD1_DATA3		0x17059
 				MX6QDL_PAD_ENET_RXD0__ESAI_TX_HF_CLK	0x10071
-				MX6QDL_PAD_SD2_CMD__GPIO1_IO11		0x30b0
-				MX6QDL_PAD_SD2_CLK__GPIO1_IO10		0x30b0
-				MX6QDL_PAD_SD2_DAT0__GPIO1_IO15		0x30b0
+				MX6QDL_PAD_SD2_CMD__GPIO1_IO11		0x030b0
+				MX6QDL_PAD_SD2_CLK__GPIO1_IO10		0x030b0
+				MX6QDL_PAD_SD2_DAT0__GPIO1_IO15		0x030b0
 			>;
 		};
 #endif
@@ -1290,11 +1289,11 @@
 				MX6QDL_PAD_SD3_DAT6__SD3_DATA6		0x17071
 				MX6QDL_PAD_SD3_DAT7__SD3_DATA7		0x17071
 				/* Reset eMMC, active low */
-				MX6QDL_PAD_SD3_RST__GPIO7_IO08		0xb060
+				MX6QDL_PAD_SD3_RST__GPIO7_IO08		0x0b060
 				/* CD */
-				MX6QDL_PAD_NANDF_CS2__GPIO6_IO15	0xb060
+				MX6QDL_PAD_NANDF_CS2__GPIO6_IO15	0x0b060
 				/* WP */
-				MX6QDL_PAD_SD2_DAT2__GPIO1_IO13		0x30b0
+				MX6QDL_PAD_SD2_DAT2__GPIO1_IO13		0x030b0
 			>;
 		};
 #endif
@@ -1302,7 +1301,7 @@
 		pinctrl_i2c1: i2c1grp {
 			fsl,pins = <
 				MX6QDL_PAD_CSI0_DAT8__I2C1_SDA		0x4001b8b1
-				MX6QDL_PAD_CSI0_DAT9__I2C1_SCL	0x4001b8b1
+				MX6QDL_PAD_CSI0_DAT9__I2C1_SCL		0x4001b8b1
 			>;
 		};
 #endif
@@ -1332,8 +1331,8 @@
 #ifdef CONFIG_QBLISSA9_HDMI
 		pinctrl_i2c6_gpio: i2c6_gpio_grp {
 			fsl,pins = <
-				MX6QDL_PAD_SD4_DAT6__GPIO2_IO14		0x3039
-				MX6QDL_PAD_SD4_DAT7__GPIO2_IO15		0x3039
+				MX6QDL_PAD_SD4_DAT6__GPIO2_IO14		0x03039
+				MX6QDL_PAD_SD4_DAT7__GPIO2_IO15		0x03039
 			>;
 		};
 #endif
@@ -1341,8 +1340,8 @@
 #ifdef CONFIG_QBLISSA9_SERIAL_CAMERA
 		pinctrl_i2c7_gpio: i2c7_gpio_grp {
 			fsl,pins = <
-				MX6QDL_PAD_DISP0_DAT0__GPIO4_IO21	0x7048
-				MX6QDL_PAD_DISP0_DAT1__GPIO4_IO22	0x7048
+				MX6QDL_PAD_DISP0_DAT0__GPIO4_IO21	0x07048
+				MX6QDL_PAD_DISP0_DAT1__GPIO4_IO22	0x07048
 			>;
 		};
 
@@ -1390,14 +1389,14 @@
 		pinctrl_pcie: pciegrp {
 			fsl,pins = <
 				/* PCIe-RST */
-				MX6QDL_PAD_DISP0_DAT10__GPIO4_IO31	0x30b0
+				MX6QDL_PAD_DISP0_DAT10__GPIO4_IO31	0x030b0
 			>;
 		};
 
 		pinctrl_status_leds: ledgrp {
 			fsl,pins = <
-				MX6QDL_PAD_KEY_COL0__GPIO4_IO06		0x30b0
-				MX6QDL_PAD_KEY_ROW0__GPIO4_IO07		0x30b0
+				MX6QDL_PAD_KEY_COL0__GPIO4_IO06		0x030b0
+				MX6QDL_PAD_KEY_ROW0__GPIO4_IO07		0x030b0
 			>;
 		};
 	};
