--- a/arch/arm/boot/dts/cont1.dts
+++ b/arch/arm/boot/dts/cont1.dts
@@ -210,7 +210,8 @@
 &ecspi4 {
 	/* SPI_A: 5x CS */
 	fsl,spi-num-chipselects = <5>;
-	cs-gpios = <&gpio7 4 0>, <&gpio3 1 0>, <&gpio3 2 0>, <&gpio3 3 0>, <&gpio3 4 0>;
+	cs-gpios = <&gpio7 4 0>, <&gpio3 1 0>, <&gpio3 2 0>, \
+		   <&gpio3 3 0>, <&gpio3 4 0>;
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_ecspi4>;
 	status = "okay";
@@ -515,41 +516,41 @@
 		pinctrl_hog: hoggrp {
 			fsl,pins = <
 				/* I2C1_RST */
-				MX6SX_PAD_GPIO1_IO02__GPIO1_IO_2	0xb0b0
+				MX6SX_PAD_GPIO1_IO02__GPIO1_IO_2	0x0b0b0
 				/* I2C1_IRQ */
-				MX6SX_PAD_GPIO1_IO03__GPIO1_IO_3	0xb0b0
+				MX6SX_PAD_GPIO1_IO03__GPIO1_IO_3	0x0b0b0
 				/* I2C2_RST */
-				MX6SX_PAD_SD4_RESET_B__GPIO6_IO_22	0xb0b0
+				MX6SX_PAD_SD4_RESET_B__GPIO6_IO_22	0x0b0b0
 				/* I2C2_IRQ */
-				MX6SX_PAD_QSPI1A_DATA0__GPIO4_IO_16	0xb0b0
+				MX6SX_PAD_QSPI1A_DATA0__GPIO4_IO_16	0x0b0b0
 				/* I2c3_RST */
-				MX6SX_PAD_QSPI1A_SS0_B__GPIO4_IO_22	0xb0b0
+				MX6SX_PAD_QSPI1A_SS0_B__GPIO4_IO_22	0x0b0b0
 				/* I2c3_IRQ */
-				MX6SX_PAD_QSPI1A_SCLK__GPIO4_IO_21	0xb0b0
+				MX6SX_PAD_QSPI1A_SCLK__GPIO4_IO_21	0x0b0b0
 				/* I2C4_RST */
-				MX6SX_PAD_LCD1_DATA04__GPIO3_IO_5	0xb0b0
+				MX6SX_PAD_LCD1_DATA04__GPIO3_IO_5	0x0b0b0
 				/* I2C4_IRQ */
-				MX6SX_PAD_LCD1_DATA05__GPIO3_IO_6	0xb0b0
+				MX6SX_PAD_LCD1_DATA05__GPIO3_IO_6	0x0b0b0
 				/* GPIOs 0 - 3 */
-				MX6SX_PAD_LCD1_DATA06__GPIO3_IO_7	0x30b0
-				MX6SX_PAD_LCD1_DATA07__GPIO3_IO_8	0x30b0
-				MX6SX_PAD_LCD1_DATA08__GPIO3_IO_9	0x30b0
-				MX6SX_PAD_LCD1_DATA09__GPIO3_IO_10	0x30b0
+				MX6SX_PAD_LCD1_DATA06__GPIO3_IO_7	0x030b0
+				MX6SX_PAD_LCD1_DATA07__GPIO3_IO_8	0x030b0
+				MX6SX_PAD_LCD1_DATA08__GPIO3_IO_9	0x030b0
+				MX6SX_PAD_LCD1_DATA09__GPIO3_IO_10	0x030b0
 				/* SJA1105 */
 				/* SJA1105 RST */
-				MX6SX_PAD_LCD1_ENABLE__GPIO3_IO_25	0xb0b0
+				MX6SX_PAD_LCD1_ENABLE__GPIO3_IO_25	0x0b0b0
 				/* PHY_RST1 */
-				MX6SX_PAD_LCD1_DATA10__GPIO3_IO_11	0xb0b0
+				MX6SX_PAD_LCD1_DATA10__GPIO3_IO_11	0x0b0b0
 				/* PHY_INT1 */
-				MX6SX_PAD_LCD1_DATA11__GPIO3_IO_12	0xb0b0
+				MX6SX_PAD_LCD1_DATA11__GPIO3_IO_12	0x0b0b0
 				/* PHY_RST2 */
-				MX6SX_PAD_LCD1_DATA12__GPIO3_IO_13	0xb0b0
+				MX6SX_PAD_LCD1_DATA12__GPIO3_IO_13	0x0b0b0
 				/* PHY_INT2 */
-				MX6SX_PAD_LCD1_DATA13__GPIO3_IO_14	0xb0b0
+				MX6SX_PAD_LCD1_DATA13__GPIO3_IO_14	0x0b0b0
 				/* PHY_RST3 */
-				MX6SX_PAD_LCD1_DATA14__GPIO3_IO_15	0xb0b0
+				MX6SX_PAD_LCD1_DATA14__GPIO3_IO_15	0x0b0b0
 				/* PHY_INT3 */
-				MX6SX_PAD_LCD1_DATA15__GPIO3_IO_16	0xb0b0
+				MX6SX_PAD_LCD1_DATA15__GPIO3_IO_16	0x0b0b0
 			>;
 		};
 
@@ -618,22 +619,22 @@
 		pinctrl_enet1_1: enet1grp-1 {
 			fsl,pins = <
 				/* MDIO */
-				MX6SX_PAD_ENET1_MDIO__ENET1_MDIO	0xa0b1
-				MX6SX_PAD_ENET1_MDC__ENET1_MDC		0xa0b1
+				MX6SX_PAD_ENET1_MDIO__ENET1_MDIO	0x0a0b1
+				MX6SX_PAD_ENET1_MDC__ENET1_MDC		0x0a0b1
 
 				/* FEC1 */
-				MX6SX_PAD_RGMII1_TXC__ENET1_RGMII_TXC	0xa0b9
-				MX6SX_PAD_RGMII1_TD0__ENET1_TX_DATA_0	0xa0b1
-				MX6SX_PAD_RGMII1_TD1__ENET1_TX_DATA_1	0xa0b1
-				MX6SX_PAD_RGMII1_TD2__ENET1_TX_DATA_2	0xa0b1
-				MX6SX_PAD_RGMII1_TD3__ENET1_TX_DATA_3	0xa0b1
-				MX6SX_PAD_RGMII1_TX_CTL__ENET1_TX_EN	0xa0b1
-				MX6SX_PAD_RGMII1_RXC__ENET1_RX_CLK	0x3081
-				MX6SX_PAD_RGMII1_RD0__ENET1_RX_DATA_0	0x3081
-				MX6SX_PAD_RGMII1_RD1__ENET1_RX_DATA_1	0x3081
-				MX6SX_PAD_RGMII1_RD2__ENET1_RX_DATA_2	0x3081
-				MX6SX_PAD_RGMII1_RD3__ENET1_RX_DATA_3	0x3081
-				MX6SX_PAD_RGMII1_RX_CTL__ENET1_RX_EN	0x3081
+				MX6SX_PAD_RGMII1_TXC__ENET1_RGMII_TXC	0x0a0b9
+				MX6SX_PAD_RGMII1_TD0__ENET1_TX_DATA_0	0x0a0b1
+				MX6SX_PAD_RGMII1_TD1__ENET1_TX_DATA_1	0x0a0b1
+				MX6SX_PAD_RGMII1_TD2__ENET1_TX_DATA_2	0x0a0b1
+				MX6SX_PAD_RGMII1_TD3__ENET1_TX_DATA_3	0x0a0b1
+				MX6SX_PAD_RGMII1_TX_CTL__ENET1_TX_EN	0x0a0b1
+				MX6SX_PAD_RGMII1_RXC__ENET1_RX_CLK	0x03081
+				MX6SX_PAD_RGMII1_RD0__ENET1_RX_DATA_0	0x03081
+				MX6SX_PAD_RGMII1_RD1__ENET1_RX_DATA_1	0x03081
+				MX6SX_PAD_RGMII1_RD2__ENET1_RX_DATA_2	0x03081
+				MX6SX_PAD_RGMII1_RD3__ENET1_RX_DATA_3	0x03081
+				MX6SX_PAD_RGMII1_RX_CTL__ENET1_RX_EN	0x03081
 			>;
 		};
 #endif
@@ -642,18 +643,18 @@
 		pinctrl_enet2_1: enet2grp-1 {
 			fsl,pins = <
 				/* FEC2 uses MDIO bus from FEC1 */
-				MX6SX_PAD_RGMII2_TXC__ENET2_RGMII_TXC	0xa0b9
-				MX6SX_PAD_RGMII2_TD0__ENET2_TX_DATA_0	0xa0b1
-				MX6SX_PAD_RGMII2_TD1__ENET2_TX_DATA_1	0xa0b1
-				MX6SX_PAD_RGMII2_TD2__ENET2_TX_DATA_2	0xa0b1
-				MX6SX_PAD_RGMII2_TD3__ENET2_TX_DATA_3	0xa0b1
-				MX6SX_PAD_RGMII2_TX_CTL__ENET2_TX_EN	0xa0b1
-				MX6SX_PAD_RGMII2_RXC__ENET2_RX_CLK	0x3081
-				MX6SX_PAD_RGMII2_RD0__ENET2_RX_DATA_0	0x3081
-				MX6SX_PAD_RGMII2_RD1__ENET2_RX_DATA_1	0x3081
-				MX6SX_PAD_RGMII2_RD2__ENET2_RX_DATA_2	0x3081
-				MX6SX_PAD_RGMII2_RD3__ENET2_RX_DATA_3	0x3081
-				MX6SX_PAD_RGMII2_RX_CTL__ENET2_RX_EN	0x3081
+				MX6SX_PAD_RGMII2_TXC__ENET2_RGMII_TXC	0x0a0b9
+				MX6SX_PAD_RGMII2_TD0__ENET2_TX_DATA_0	0x0a0b1
+				MX6SX_PAD_RGMII2_TD1__ENET2_TX_DATA_1	0x0a0b1
+				MX6SX_PAD_RGMII2_TD2__ENET2_TX_DATA_2	0x0a0b1
+				MX6SX_PAD_RGMII2_TD3__ENET2_TX_DATA_3	0x0a0b1
+				MX6SX_PAD_RGMII2_TX_CTL__ENET2_TX_EN	0x0a0b1
+				MX6SX_PAD_RGMII2_RXC__ENET2_RX_CLK	0x03081
+				MX6SX_PAD_RGMII2_RD0__ENET2_RX_DATA_0	0x03081
+				MX6SX_PAD_RGMII2_RD1__ENET2_RX_DATA_1	0x03081
+				MX6SX_PAD_RGMII2_RD2__ENET2_RX_DATA_2	0x03081
+				MX6SX_PAD_RGMII2_RD3__ENET2_RX_DATA_3	0x03081
+				MX6SX_PAD_RGMII2_RX_CTL__ENET2_RX_EN	0x03081
 			>;
 		};
 #endif
@@ -676,22 +677,22 @@
 		pinctrl_gpmi_nand_1: gpmi-nand-1 {
 			/* Already configured in NBoot/U-Boot */
 			fsl,pins = <
-				MX6SX_PAD_NAND_CLE__RAWNAND_CLE		0xb0b1
-				MX6SX_PAD_NAND_ALE__RAWNAND_ALE		0xb0b1
-				MX6SX_PAD_NAND_WP_B__RAWNAND_WP_B	0xb0b1
-				MX6SX_PAD_NAND_READY_B__RAWNAND_READY_B	0xb000
-				MX6SX_PAD_NAND_CE0_B__RAWNAND_CE0_B	0xb0b1
-				//MX6SX_PAD_NAND_CE1_B__RAWNAND_CE1_B	0xb0b1
-				MX6SX_PAD_NAND_RE_B__RAWNAND_RE_B	0xb0b1
-				MX6SX_PAD_NAND_WE_B__RAWNAND_WE_B	0xb0b1
-				MX6SX_PAD_NAND_DATA00__RAWNAND_DATA00	0xb0b1
-				MX6SX_PAD_NAND_DATA01__RAWNAND_DATA01	0xb0b1
-				MX6SX_PAD_NAND_DATA02__RAWNAND_DATA02	0xb0b1
-				MX6SX_PAD_NAND_DATA03__RAWNAND_DATA03	0xb0b1
-				MX6SX_PAD_NAND_DATA04__RAWNAND_DATA04	0xb0b1
-				MX6SX_PAD_NAND_DATA05__RAWNAND_DATA05	0xb0b1
-				MX6SX_PAD_NAND_DATA06__RAWNAND_DATA06	0xb0b1
-				MX6SX_PAD_NAND_DATA07__RAWNAND_DATA07	0xb0b1
+				MX6SX_PAD_NAND_CLE__RAWNAND_CLE		0x0b0b1
+				MX6SX_PAD_NAND_ALE__RAWNAND_ALE		0x0b0b1
+				MX6SX_PAD_NAND_WP_B__RAWNAND_WP_B	0x0b0b1
+				MX6SX_PAD_NAND_READY_B__RAWNAND_READY_B	0x0b000
+				MX6SX_PAD_NAND_CE0_B__RAWNAND_CE0_B	0x0b0b1
+				//MX6SX_PAD_NAND_CE1_B__RAWNAND_CE1_B	0x0b0b1
+				MX6SX_PAD_NAND_RE_B__RAWNAND_RE_B	0x0b0b1
+				MX6SX_PAD_NAND_WE_B__RAWNAND_WE_B	0x0b0b1
+				MX6SX_PAD_NAND_DATA00__RAWNAND_DATA00	0x0b0b1
+				MX6SX_PAD_NAND_DATA01__RAWNAND_DATA01	0x0b0b1
+				MX6SX_PAD_NAND_DATA02__RAWNAND_DATA02	0x0b0b1
+				MX6SX_PAD_NAND_DATA03__RAWNAND_DATA03	0x0b0b1
+				MX6SX_PAD_NAND_DATA04__RAWNAND_DATA04	0x0b0b1
+				MX6SX_PAD_NAND_DATA05__RAWNAND_DATA05	0x0b0b1
+				MX6SX_PAD_NAND_DATA06__RAWNAND_DATA06	0x0b0b1
+				MX6SX_PAD_NAND_DATA07__RAWNAND_DATA07	0x0b0b1
 			>;
 		};
 #endif
@@ -800,8 +801,10 @@
 				MX6SX_PAD_SD2_DATA1__USDHC2_DATA1	0x17071
 				MX6SX_PAD_SD2_DATA2__USDHC2_DATA2	0x17071
 				MX6SX_PAD_SD2_DATA3__USDHC2_DATA3	0x17071
-				MX6SX_PAD_GPIO1_IO06__GPIO1_IO_6	0x17000 /* CD */
-				MX6SX_PAD_GPIO1_IO07__GPIO1_IO_7	0x17000 /* WP */
+				/* CD */
+				MX6SX_PAD_GPIO1_IO06__GPIO1_IO_6	0x17000
+				/* WP */
+				MX6SX_PAD_GPIO1_IO07__GPIO1_IO_7	0x17000
 			>;
 		};
 	};
