--- a/arch/arm/boot/dts/efusa7ul.dts
+++ b/arch/arm/boot/dts/efusa7ul.dts
@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2016 F&S Elektronik Systeme GmbH
+ * Copyright (C) 2016-2017 F&S Elektronik Systeme GmbH
  *
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License version 2 as
@@ -32,12 +32,12 @@ wvga {					\
 	clock-frequency = <33500000>;	\
 	hactive = <800>;  		\
 	vactive = <480>;		\
-	hfront-porch = <40>;		\
-	hback-porch = <88>;		\
-	hsync-len = <128>;		\
-	vback-porch = <33>;		\
-	vfront-porch = <10>;		\
-	vsync-len = <2>;		\
+	hfront-porch = <210>;		\
+	hback-porch = <16>;		\
+	hsync-len = <30>;		\
+	vback-porch = <10>;		\
+	vfront-porch = <22>;		\
+	vsync-len = <13>;		\
 	hsync-active = <0>;		\
 	vsync-active = <0>;		\
 	de-active = <1>;		\
@@ -113,7 +113,8 @@ wvga {					\
 	};
 
 	pxp_v4l2 {
-		compatible = "fsl,imx6ul-pxp-v4l2", "fsl,imx6sx-pxp-v4l2", "fsl,imx6sl-pxp-v4l2";
+		compatible = "fsl,imx6ul-pxp-v4l2", "fsl,imx6sx-pxp-v4l2",
+			     "fsl,imx6sl-pxp-v4l2";
 		status = "okay";
 	};
 
@@ -767,22 +768,22 @@ wvga {					\
 				MX6UL_PAD_GPIO1_IO09__GPIO1_IO09	0x17059
 
 				/* I2C_A IRQ (ext. touch, etc.) */
-				MX6UL_PAD_SNVS_TAMPER0__GPIO5_IO00	0xb0b0
+				MX6UL_PAD_SNVS_TAMPER0__GPIO5_IO00	0x0b0b0
 
 				/* I2C_B IRQ (ext. touch, etc.) */
-				MX6UL_PAD_SNVS_TAMPER1__GPIO5_IO01	0xb0b0
+				MX6UL_PAD_SNVS_TAMPER1__GPIO5_IO01	0x0b0b0
 
 				/* I2C_A Reset (ext. touch, etc.) */
-				MX6UL_PAD_SNVS_TAMPER2__GPIO5_IO02	0xb0b0
+				MX6UL_PAD_SNVS_TAMPER2__GPIO5_IO02	0x0b0b0
 
 				/* I2C_B Reset (ext. touch, etc.) */
-				MX6UL_PAD_SNVS_TAMPER3__GPIO5_IO03	0xb0b0
+				MX6UL_PAD_SNVS_TAMPER3__GPIO5_IO03	0x0b0b0
 
 				/* VLCD */
-				MX6UL_PAD_SNVS_TAMPER4__GPIO5_IO04	0x30b0
+				MX6UL_PAD_SNVS_TAMPER4__GPIO5_IO04	0x030b0
 
 				/* VCFL */
-				MX6UL_PAD_SNVS_TAMPER5__GPIO5_IO05	0x30b0
+				MX6UL_PAD_SNVS_TAMPER5__GPIO5_IO05	0x030b0
 			>;
 		};
 
@@ -872,33 +873,33 @@ wvga {					\
 
 		pinctrl_lcdif_dat: lcdifdatgrp {
 			fsl,pins = <
-				MX6UL_PAD_LCD_DATA00__LCDIF_DATA00	0x79
-				MX6UL_PAD_LCD_DATA01__LCDIF_DATA01	0x79
-				MX6UL_PAD_LCD_DATA02__LCDIF_DATA02	0x79
-				MX6UL_PAD_LCD_DATA03__LCDIF_DATA03	0x79
-				MX6UL_PAD_LCD_DATA04__LCDIF_DATA04	0x79
-				MX6UL_PAD_LCD_DATA05__LCDIF_DATA05	0x79
-				MX6UL_PAD_LCD_DATA06__LCDIF_DATA06	0x79
-				MX6UL_PAD_LCD_DATA07__LCDIF_DATA07	0x79
-				MX6UL_PAD_LCD_DATA08__LCDIF_DATA08	0x79
-				MX6UL_PAD_LCD_DATA09__LCDIF_DATA09	0x79
-				MX6UL_PAD_LCD_DATA10__LCDIF_DATA10	0x79
-				MX6UL_PAD_LCD_DATA11__LCDIF_DATA11	0x79
-				MX6UL_PAD_LCD_DATA12__LCDIF_DATA12	0x79
-				MX6UL_PAD_LCD_DATA13__LCDIF_DATA13	0x79
-				MX6UL_PAD_LCD_DATA14__LCDIF_DATA14	0x79
-				MX6UL_PAD_LCD_DATA15__LCDIF_DATA15	0x79
-				MX6UL_PAD_LCD_DATA16__LCDIF_DATA16	0x79
-				MX6UL_PAD_LCD_DATA17__LCDIF_DATA17	0x79
+				MX6UL_PAD_LCD_DATA00__LCDIF_DATA00	0x00079
+				MX6UL_PAD_LCD_DATA01__LCDIF_DATA01	0x00079
+				MX6UL_PAD_LCD_DATA02__LCDIF_DATA02	0x00079
+				MX6UL_PAD_LCD_DATA03__LCDIF_DATA03	0x00079
+				MX6UL_PAD_LCD_DATA04__LCDIF_DATA04	0x00079
+				MX6UL_PAD_LCD_DATA05__LCDIF_DATA05	0x00079
+				MX6UL_PAD_LCD_DATA06__LCDIF_DATA06	0x00079
+				MX6UL_PAD_LCD_DATA07__LCDIF_DATA07	0x00079
+				MX6UL_PAD_LCD_DATA08__LCDIF_DATA08	0x00079
+				MX6UL_PAD_LCD_DATA09__LCDIF_DATA09	0x00079
+				MX6UL_PAD_LCD_DATA10__LCDIF_DATA10	0x00079
+				MX6UL_PAD_LCD_DATA11__LCDIF_DATA11	0x00079
+				MX6UL_PAD_LCD_DATA12__LCDIF_DATA12	0x00079
+				MX6UL_PAD_LCD_DATA13__LCDIF_DATA13	0x00079
+				MX6UL_PAD_LCD_DATA14__LCDIF_DATA14	0x00079
+				MX6UL_PAD_LCD_DATA15__LCDIF_DATA15	0x00079
+				MX6UL_PAD_LCD_DATA16__LCDIF_DATA16	0x00079
+				MX6UL_PAD_LCD_DATA17__LCDIF_DATA17	0x00079
 			>;
 		};
 
 		pinctrl_lcdif_ctrl: lcdifctrlgrp {
 			fsl,pins = <
-				MX6UL_PAD_LCD_CLK__LCDIF_CLK		0x79
-				MX6UL_PAD_LCD_ENABLE__LCDIF_ENABLE	0x79
-				MX6UL_PAD_LCD_HSYNC__LCDIF_HSYNC	0x79
-				MX6UL_PAD_LCD_VSYNC__LCDIF_VSYNC	0x79
+				MX6UL_PAD_LCD_CLK__LCDIF_CLK		0x00079
+				MX6UL_PAD_LCD_ENABLE__LCDIF_ENABLE	0x00079
+				MX6UL_PAD_LCD_HSYNC__LCDIF_HSYNC	0x00079
+				MX6UL_PAD_LCD_VSYNC__LCDIF_VSYNC	0x00079
 			>;
 		};
 
@@ -1023,12 +1024,12 @@ wvga {					\
 #if 0 //### TODO
 		pinctrl_qspi: qspigrp {
 			fsl,pins = <
-				MX6UL_PAD_NAND_WP_B__QSPI_A_SCLK	0x70a1
-				MX6UL_PAD_NAND_READY_B__QSPI_A_DATA00	0x70a1
-				MX6UL_PAD_NAND_CE0_B__QSPI_A_DATA01	0x70a1
-				MX6UL_PAD_NAND_CE1_B__QSPI_A_DATA02	0x70a1
-				MX6UL_PAD_NAND_CLE__QSPI_A_DATA03	0x70a1
-				MX6UL_PAD_NAND_DQS__QSPI_A_SS0_B	0x70a1
+				MX6UL_PAD_NAND_WP_B__QSPI_A_SCLK	0x070a1
+				MX6UL_PAD_NAND_READY_B__QSPI_A_DATA00	0x070a1
+				MX6UL_PAD_NAND_CE0_B__QSPI_A_DATA01	0x070a1
+				MX6UL_PAD_NAND_CE1_B__QSPI_A_DATA02	0x070a1
+				MX6UL_PAD_NAND_CLE__QSPI_A_DATA03	0x070a1
+				MX6UL_PAD_NAND_DQS__QSPI_A_SS0_B	0x070a1
 			>;
 		};
 #endif
@@ -1052,7 +1053,7 @@ wvga {					\
 				MX6UL_PAD_CSI_DATA07__ECSPI1_MISO	0x100b1
 
 				/* IRQ */
-				MX6UL_PAD_SNVS_TAMPER6__GPIO5_IO06	0xb0b0
+				MX6UL_PAD_SNVS_TAMPER6__GPIO5_IO06	0x0b0b0
 			>;
 		};
 
@@ -1064,7 +1065,7 @@ wvga {					\
 				MX6UL_PAD_UART5_RX_DATA__ECSPI2_MISO	0x100b1
 
 				/* IRQ */
-				MX6UL_PAD_SNVS_TAMPER7__GPIO5_IO07	0xb0b0
+				MX6UL_PAD_SNVS_TAMPER7__GPIO5_IO07	0x0b0b0
 			>;
 		};
 
@@ -1073,22 +1074,22 @@ wvga {					\
 		pinctrl_gpmi_nand_1: gpmi-nand-1 {
 			/* Already configured in NBoot/U-Boot */
 			fsl,pins = <
-				MX6SX_PAD_NAND_CLE__RAWNAND_CLE		0xb0b1
-				MX6SX_PAD_NAND_ALE__RAWNAND_ALE		0xb0b1
-				MX6SX_PAD_NAND_WP_B__RAWNAND_WP_B	0xb0b1
-				MX6SX_PAD_NAND_READY_B__RAWNAND_READY_B	0xb000
-				MX6SX_PAD_NAND_CE0_B__RAWNAND_CE0_B	0xb0b1
-				//MX6SX_PAD_NAND_CE1_B__RAWNAND_CE1_B	0xb0b1
-				MX6SX_PAD_NAND_RE_B__RAWNAND_RE_B	0xb0b1
-				MX6SX_PAD_NAND_WE_B__RAWNAND_WE_B	0xb0b1
-				MX6SX_PAD_NAND_DATA00__RAWNAND_DATA00	0xb0b1
-				MX6SX_PAD_NAND_DATA01__RAWNAND_DATA01	0xb0b1
-				MX6SX_PAD_NAND_DATA02__RAWNAND_DATA02	0xb0b1
-				MX6SX_PAD_NAND_DATA03__RAWNAND_DATA03	0xb0b1
-				MX6SX_PAD_NAND_DATA04__RAWNAND_DATA04	0xb0b1
-				MX6SX_PAD_NAND_DATA05__RAWNAND_DATA05	0xb0b1
-				MX6SX_PAD_NAND_DATA06__RAWNAND_DATA06	0xb0b1
-				MX6SX_PAD_NAND_DATA07__RAWNAND_DATA07	0xb0b1
+				MX6SX_PAD_NAND_CLE__RAWNAND_CLE		0x0b0b1
+				MX6SX_PAD_NAND_ALE__RAWNAND_ALE		0x0b0b1
+				MX6SX_PAD_NAND_WP_B__RAWNAND_WP_B	0x0b0b1
+				MX6SX_PAD_NAND_READY_B__RAWNAND_READY_B	0x0b000
+				MX6SX_PAD_NAND_CE0_B__RAWNAND_CE0_B	0x0b0b1
+				//MX6SX_PAD_NAND_CE1_B__RAWNAND_CE1_B	0x0b0b1
+				MX6SX_PAD_NAND_RE_B__RAWNAND_RE_B	0x0b0b1
+				MX6SX_PAD_NAND_WE_B__RAWNAND_WE_B	0x0b0b1
+				MX6SX_PAD_NAND_DATA00__RAWNAND_DATA00	0x0b0b1
+				MX6SX_PAD_NAND_DATA01__RAWNAND_DATA01	0x0b0b1
+				MX6SX_PAD_NAND_DATA02__RAWNAND_DATA02	0x0b0b1
+				MX6SX_PAD_NAND_DATA03__RAWNAND_DATA03	0x0b0b1
+				MX6SX_PAD_NAND_DATA04__RAWNAND_DATA04	0x0b0b1
+				MX6SX_PAD_NAND_DATA05__RAWNAND_DATA05	0x0b0b1
+				MX6SX_PAD_NAND_DATA06__RAWNAND_DATA06	0x0b0b1
+				MX6SX_PAD_NAND_DATA07__RAWNAND_DATA07	0x0b0b1
 			>;
 		};
 #endif
