--- a/arch/arm/boot/dts/efusa9qdl.dtsi
+++ b/arch/arm/boot/dts/efusa9qdl.dtsi
@@ -1,5 +1,5 @@
 /*
- * Copyright 2016 F&S Elektronik Systeme GmbH
+ * Copyright 2016-2017 F&S Elektronik Systeme GmbH
  *
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License version 2 as
@@ -307,8 +307,7 @@
 
 #ifdef CONFIG_EFUSA9_HDMI_AUDIO
 	sound-hdmi {
-		compatible = "fsl,imx6q-audio-hdmi",
-			     "fsl,imx-audio-hdmi";
+		compatible = "fsl,imx6q-audio-hdmi", "fsl,imx-audio-hdmi";
 		model = "imx-audio-hdmi";
 		hdmi-controller = <&hdmi_audio>;
 	};
@@ -512,7 +511,7 @@
 	};
 };
 
-/* RAM size for Continues Memory Allocator; if not defined, use 320 MB */
+/* RAM size for Continuous Memory Allocator; if not defined, use 320 MB */
 #ifndef CONFIG_EFUSA9_CMA_SIZE
 #define CONFIG_EFUSA9_CMA_SIZE 0x14000000
 #endif
@@ -534,8 +533,8 @@
 &ecspi1 {
 	fsl,spi-num-chipselects = <3>;
 	cs-gpios = <&gpio2 30 0>,	/* optional on-board SPI flash */
-		<&gpio3 24 0>, 		/* SPI_B_CS1 */
-		<&gpio3 25 0>; 		/* SPI_B_CS2 */
+		<&gpio3 24 0>,		/* SPI_B_CS1 */
+		<&gpio3 25 0>;		/* SPI_B_CS2 */
 
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_ecspi1_1 &pinctrl_ecspi1_cs>;
@@ -690,7 +689,7 @@
 		interrupt-parent = <&gpio1>;
 		interrupts = <28 IRQ_TYPE_EDGE_FALLING>;
 	};
-#if 0 	//###TODO fix
+#if 0 	//### FIXME
 #ifdef CONFIG_EFUSA9_SERIAL_CAMERA
 	ov564x_mipi: ov564x_mipi@3c {
 		compatible = "ovti,ov564x_mipi";
@@ -710,7 +709,7 @@
 		mclk_source = <0>;
 	};
 #endif /*  CONFIG_EFUSA9_SERIAL_CAMERA */
-#endif 	//##TODO fix
+#endif //### FIXME
 
 #ifdef CONFIG_EFUSA9_PARALLEL_CAMERA
 	ov9665: ov9665@30 {
@@ -897,7 +896,7 @@
 	fus,skipblocks = <2>;
 	fus,chunk1k;
 	fus,ecc_strength = <8>;		/* Spare area 64 bytes */
-	//fus,ecc_strength = <40>;	/* Spare area 224 bytes */
+//###	fus,ecc_strength = <40>;	/* Spare area 224 bytes */
 	status = "okay";
 };
 #endif
@@ -1049,7 +1048,7 @@
 	 * When using one IPU (id=0):
 	 * HDMI can go to DI1, unless LVDS1 is also active. In this case LVDS1
 	 * must go to DI1 and HDMI to DI0.
-	 */	 
+	 */
 	ipu_id = <0>;
 #if (__HDMI_ON_0_OR_1__ && __LVDS1_ON_0_OR_1__)
 	disp_id = <0>;
@@ -1059,7 +1058,7 @@
 #else /* !CONFIG_EFUSA9_USE_ONE_IPU */
 	/*
 	 * When using two IPUs:
- 	 * HDMI can always go to DI1. If HDMI is on MXCFB0 and LCD on MXCFB1,
+	 * HDMI can always go to DI1. If HDMI is on MXCFB0 and LCD on MXCFB1,
 	 * or vice versa, or HDMI is on MXCFB2 and LCD is on MXCFB3, or vice
 	 * versa, then HDMI has to go to IPU2 (id=1), otherwise to IPU1 (id=0).
 	 */
@@ -1189,21 +1188,21 @@
 		/* Pins already set in bootloader */
 		pinctrl_gpmi_nand_1: gpmi-nand-1 {
 			fsl,pins = <
-				MX6QDL_PAD_NANDF_CLE__NAND_CLE		0xb0b1
-				MX6QDL_PAD_NANDF_ALE__NAND_ALE		0xb0b1
-				MX6QDL_PAD_NANDF_WP_B__NAND_WP_B	0xb0b1
-				MX6QDL_PAD_NANDF_RB0__NAND_READY_B	0xb000
-				MX6QDL_PAD_NANDF_CS0__NAND_CE0_B	0xb0b1
-				MX6QDL_PAD_SD4_CMD__NAND_RE_B		0xb0b1
-				MX6QDL_PAD_SD4_CLK__NAND_WE_B		0xb0b1
-				MX6QDL_PAD_NANDF_D0__NAND_DATA00	0xb0b1
-				MX6QDL_PAD_NANDF_D1__NAND_DATA01	0xb0b1
-				MX6QDL_PAD_NANDF_D2__NAND_DATA02	0xb0b1
-				MX6QDL_PAD_NANDF_D3__NAND_DATA03	0xb0b1
-				MX6QDL_PAD_NANDF_D4__NAND_DATA04	0xb0b1
-				MX6QDL_PAD_NANDF_D5__NAND_DATA05	0xb0b1
-				MX6QDL_PAD_NANDF_D6__NAND_DATA06	0xb0b1
-				MX6QDL_PAD_NANDF_D7__NAND_DATA07	0xb0b1
+				MX6QDL_PAD_NANDF_CLE__NAND_CLE		0x0b0b1
+				MX6QDL_PAD_NANDF_ALE__NAND_ALE		0x0b0b1
+				MX6QDL_PAD_NANDF_WP_B__NAND_WP_B	0x0b0b1
+				MX6QDL_PAD_NANDF_RB0__NAND_READY_B	0x0b000
+				MX6QDL_PAD_NANDF_CS0__NAND_CE0_B	0x0b0b1
+				MX6QDL_PAD_SD4_CMD__NAND_RE_B		0x0b0b1
+				MX6QDL_PAD_SD4_CLK__NAND_WE_B		0x0b0b1
+				MX6QDL_PAD_NANDF_D0__NAND_DATA00	0x0b0b1
+				MX6QDL_PAD_NANDF_D1__NAND_DATA01	0x0b0b1
+				MX6QDL_PAD_NANDF_D2__NAND_DATA02	0x0b0b1
+				MX6QDL_PAD_NANDF_D3__NAND_DATA03	0x0b0b1
+				MX6QDL_PAD_NANDF_D4__NAND_DATA04	0x0b0b1
+				MX6QDL_PAD_NANDF_D5__NAND_DATA05	0x0b0b1
+				MX6QDL_PAD_NANDF_D6__NAND_DATA06	0x0b0b1
+				MX6QDL_PAD_NANDF_D7__NAND_DATA07	0x0b0b1
 			>;
 		};
 #endif
@@ -1211,10 +1210,10 @@
 		/* LCD interface */
 		pinctrl_ipu1_ctrl: ipu1grp-1 {
 			fsl,pins = <
-				MX6QDL_PAD_DI0_DISP_CLK__IPU1_DI0_DISP_CLK 0x10
-				MX6QDL_PAD_DI0_PIN2__IPU1_DI0_PIN02	   0x10
-				MX6QDL_PAD_DI0_PIN3__IPU1_DI0_PIN03	   0x10
-				MX6QDL_PAD_DI0_PIN15__IPU1_DI0_PIN15	   0x10
+				MX6QDL_PAD_DI0_DISP_CLK__IPU1_DI0_DISP_CLK 0x00010
+				MX6QDL_PAD_DI0_PIN2__IPU1_DI0_PIN02	0x00010
+				MX6QDL_PAD_DI0_PIN3__IPU1_DI0_PIN03	0x00010
+				MX6QDL_PAD_DI0_PIN15__IPU1_DI0_PIN15	0x00010
 			>;
 		};
 
