--- a/arch/arm/boot/dts/efusa9x.dts
+++ b/arch/arm/boot/dts/efusa9x.dts
@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2016 F&S Elektronik Systeme GmbH
+ * Copyright (C) 2016-2017 F&S Elektronik Systeme GmbH
  *
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License version 2 as
@@ -80,7 +80,7 @@ lcd_wvga {				\
 #define CONFIG_EFUSA9X_LVDS_TIMING \
 lvds_wvga {				\
 	clock-frequency = <33500000>;	\
-	hactive = <800>;  		\
+	hactive = <800>;		\
 	vactive = <480>;		\
 	hfront-porch = <40>;		\
 	hback-porch = <88>;		\
@@ -172,16 +172,6 @@ lvds_wvga {				\
 			clock-frequency = <24576000>;
 		};
 	};
-
-#if 0 //###
-	/* ### Versuch, die Reset-Leitung für EMMC zu toggeln */
-	emmc_reset: emmc-reset {
-		compatible = "gpio-reset";
-		reset-gpios = <&gpio6 22 GPIO_ACTIVE_LOW>;
-		reset-delay-us = <1>;
-		#reset-cells = <0>;
-	};
-#endif
 
 	memory {
 		reg = <0x80000000 0x80000000>;
@@ -1081,16 +1071,13 @@ lvds_wvga {				\
 		pinctrl_hog: hoggrp {
 			fsl,pins = <
 				/* VBL_ON on SKIT J3 */
-				MX6SX_PAD_LCD1_DATA19__GPIO3_IO_20 	0x17059
+				MX6SX_PAD_LCD1_DATA19__GPIO3_IO_20	0x17059
 				/* VLCD_ON */
 				MX6SX_PAD_LCD1_DATA18__GPIO3_IO_19	0x17059
 				/* I2C2_IRQn (SX8655, ext. touch) */
 				MX6SX_PAD_SD3_CLK__GPIO7_IO_0		0x80000000
 				/* RESETOUTn */
 				MX6SX_PAD_ENET1_CRS__GPIO2_IO_1		0x80000000
-#if 0 //###
-				MX6SX_PAD_GPIO1_IO13__WDOG1_WDOG_ANY	0x10b0
-#endif //###
 				/* Reset for external touches on I2C_A */
 				MX6SX_PAD_LCD1_DATA20__GPIO3_IO_21	0x80000000
 			>;
@@ -1110,24 +1097,24 @@ lvds_wvga {				\
 		pinctrl_enet1_1: enet1grp-1 {
 			fsl,pins = <
 				/* MDIO */
-				MX6SX_PAD_ENET2_CRS__ENET1_MDIO		0xa0b1
-				MX6SX_PAD_ENET2_COL__ENET1_MDC		0xa0b1
+				MX6SX_PAD_ENET2_CRS__ENET1_MDIO		0x0a0b1
+				MX6SX_PAD_ENET2_COL__ENET1_MDC		0x0a0b1
 
 				/* FEC1 */
-				MX6SX_PAD_ENET2_RX_CLK__ENET2_REF_CLK_25M 0xa0b9
-				MX6SX_PAD_ENET1_TX_CLK__ENET1_REF_CLK1	0xa0b1
-				MX6SX_PAD_RGMII1_TXC__ENET1_RGMII_TXC	0xa0b9
-				MX6SX_PAD_RGMII1_TD0__ENET1_TX_DATA_0	0xa0b1
-				MX6SX_PAD_RGMII1_TD1__ENET1_TX_DATA_1	0xa0b1
-				MX6SX_PAD_RGMII1_TD2__ENET1_TX_DATA_2	0xa0b1
-				MX6SX_PAD_RGMII1_TD3__ENET1_TX_DATA_3	0xa0b1
-				MX6SX_PAD_RGMII1_TX_CTL__ENET1_TX_EN	0xa0b1
-				MX6SX_PAD_RGMII1_RXC__ENET1_RX_CLK	0x3081
-				MX6SX_PAD_RGMII1_RD0__ENET1_RX_DATA_0	0x3081
-				MX6SX_PAD_RGMII1_RD1__ENET1_RX_DATA_1	0x3081
-				MX6SX_PAD_RGMII1_RD2__ENET1_RX_DATA_2	0x3081
-				MX6SX_PAD_RGMII1_RD3__ENET1_RX_DATA_3	0x3081
-				MX6SX_PAD_RGMII1_RX_CTL__ENET1_RX_EN	0x3081
+				MX6SX_PAD_ENET2_RX_CLK__ENET2_REF_CLK_25M 0x0a0b9
+				MX6SX_PAD_ENET1_TX_CLK__ENET1_REF_CLK1	0x0a0b1
+				MX6SX_PAD_RGMII1_TXC__ENET1_RGMII_TXC	0x0a0b9
+				MX6SX_PAD_RGMII1_TD0__ENET1_TX_DATA_0	0x0a0b1
+				MX6SX_PAD_RGMII1_TD1__ENET1_TX_DATA_1	0x0a0b1
+				MX6SX_PAD_RGMII1_TD2__ENET1_TX_DATA_2	0x0a0b1
+				MX6SX_PAD_RGMII1_TD3__ENET1_TX_DATA_3	0x0a0b1
+				MX6SX_PAD_RGMII1_TX_CTL__ENET1_TX_EN	0x0a0b1
+				MX6SX_PAD_RGMII1_RXC__ENET1_RX_CLK	0x03081
+				MX6SX_PAD_RGMII1_RD0__ENET1_RX_DATA_0	0x03081
+				MX6SX_PAD_RGMII1_RD1__ENET1_RX_DATA_1	0x03081
+				MX6SX_PAD_RGMII1_RD2__ENET1_RX_DATA_2	0x03081
+				MX6SX_PAD_RGMII1_RD3__ENET1_RX_DATA_3	0x03081
+				MX6SX_PAD_RGMII1_RX_CTL__ENET1_RX_EN	0x03081
 			>;
 		};
 #endif
@@ -1136,46 +1123,46 @@ lvds_wvga {				\
 		pinctrl_enet2_1: enet2grp-1 {
 			fsl,pins = <
 				/* FEC2 uses MDIO bus from FEC1 */
-				MX6SX_PAD_RGMII2_TXC__ENET2_RGMII_TXC	0xa0b9
-				MX6SX_PAD_RGMII2_TD0__ENET2_TX_DATA_0	0xa0b1
-				MX6SX_PAD_RGMII2_TD1__ENET2_TX_DATA_1	0xa0b1
-				MX6SX_PAD_RGMII2_TD2__ENET2_TX_DATA_2	0xa0b1
-				MX6SX_PAD_RGMII2_TD3__ENET2_TX_DATA_3	0xa0b1
-				MX6SX_PAD_RGMII2_TX_CTL__ENET2_TX_EN	0xa0b1
-				MX6SX_PAD_RGMII2_RXC__ENET2_RX_CLK	0x3081
-				MX6SX_PAD_RGMII2_RD0__ENET2_RX_DATA_0	0x3081
-				MX6SX_PAD_RGMII2_RD1__ENET2_RX_DATA_1	0x3081
-				MX6SX_PAD_RGMII2_RD2__ENET2_RX_DATA_2	0x3081
-				MX6SX_PAD_RGMII2_RD3__ENET2_RX_DATA_3	0x3081
-				MX6SX_PAD_RGMII2_RX_CTL__ENET2_RX_EN	0x3081
+				MX6SX_PAD_RGMII2_TXC__ENET2_RGMII_TXC	0x0a0b9
+				MX6SX_PAD_RGMII2_TD0__ENET2_TX_DATA_0	0x0a0b1
+				MX6SX_PAD_RGMII2_TD1__ENET2_TX_DATA_1	0x0a0b1
+				MX6SX_PAD_RGMII2_TD2__ENET2_TX_DATA_2	0x0a0b1
+				MX6SX_PAD_RGMII2_TD3__ENET2_TX_DATA_3	0x0a0b1
+				MX6SX_PAD_RGMII2_TX_CTL__ENET2_TX_EN	0x0a0b1
+				MX6SX_PAD_RGMII2_RXC__ENET2_RX_CLK	0x03081
+				MX6SX_PAD_RGMII2_RD0__ENET2_RX_DATA_0	0x03081
+				MX6SX_PAD_RGMII2_RD1__ENET2_RX_DATA_1	0x03081
+				MX6SX_PAD_RGMII2_RD2__ENET2_RX_DATA_2	0x03081
+				MX6SX_PAD_RGMII2_RD3__ENET2_RX_DATA_3	0x03081
+				MX6SX_PAD_RGMII2_RX_CTL__ENET2_RX_EN	0x03081
 			>;
 		};
 #endif
 
 		pinctrl_lcdif1_1: lcd1grp-1 {
 			fsl,pins = <
-				MX6SX_PAD_LCD1_CLK__LCDIF1_CLK		0x00b0
-				MX6SX_PAD_LCD1_DATA00__LCDIF1_DATA_0	0x00b0
-				MX6SX_PAD_LCD1_DATA01__LCDIF1_DATA_1	0x00b0
-				MX6SX_PAD_LCD1_DATA02__LCDIF1_DATA_2	0x00b0
-				MX6SX_PAD_LCD1_DATA03__LCDIF1_DATA_3	0x00b0
-				MX6SX_PAD_LCD1_DATA04__LCDIF1_DATA_4	0x00b0
-				MX6SX_PAD_LCD1_DATA05__LCDIF1_DATA_5	0x00b0
-				MX6SX_PAD_LCD1_DATA06__LCDIF1_DATA_6	0x00b0
-				MX6SX_PAD_LCD1_DATA07__LCDIF1_DATA_7	0x00b0
-				MX6SX_PAD_LCD1_DATA08__LCDIF1_DATA_8	0x00b0
-				MX6SX_PAD_LCD1_DATA09__LCDIF1_DATA_9	0x00b0
-				MX6SX_PAD_LCD1_DATA10__LCDIF1_DATA_10	0x00b0
-				MX6SX_PAD_LCD1_DATA11__LCDIF1_DATA_11	0x00b0
-				MX6SX_PAD_LCD1_DATA12__LCDIF1_DATA_12	0x00b0
-				MX6SX_PAD_LCD1_DATA13__LCDIF1_DATA_13	0x00b0
-				MX6SX_PAD_LCD1_DATA14__LCDIF1_DATA_14	0x00b0
-				MX6SX_PAD_LCD1_DATA15__LCDIF1_DATA_15	0x00b0
-				MX6SX_PAD_LCD1_DATA16__LCDIF1_DATA_16	0x00b0
-				MX6SX_PAD_LCD1_DATA17__LCDIF1_DATA_17	0x00b0
-				MX6SX_PAD_LCD1_ENABLE__LCDIF1_ENABLE	0x00b0
-				MX6SX_PAD_LCD1_HSYNC__LCDIF1_HSYNC	0x00b0
-				MX6SX_PAD_LCD1_VSYNC__LCDIF1_VSYNC	0x00b0
+				MX6SX_PAD_LCD1_CLK__LCDIF1_CLK		0x000b0
+				MX6SX_PAD_LCD1_DATA00__LCDIF1_DATA_0	0x000b0
+				MX6SX_PAD_LCD1_DATA01__LCDIF1_DATA_1	0x000b0
+				MX6SX_PAD_LCD1_DATA02__LCDIF1_DATA_2	0x000b0
+				MX6SX_PAD_LCD1_DATA03__LCDIF1_DATA_3	0x000b0
+				MX6SX_PAD_LCD1_DATA04__LCDIF1_DATA_4	0x000b0
+				MX6SX_PAD_LCD1_DATA05__LCDIF1_DATA_5	0x000b0
+				MX6SX_PAD_LCD1_DATA06__LCDIF1_DATA_6	0x000b0
+				MX6SX_PAD_LCD1_DATA07__LCDIF1_DATA_7	0x000b0
+				MX6SX_PAD_LCD1_DATA08__LCDIF1_DATA_8	0x000b0
+				MX6SX_PAD_LCD1_DATA09__LCDIF1_DATA_9	0x000b0
+				MX6SX_PAD_LCD1_DATA10__LCDIF1_DATA_10	0x000b0
+				MX6SX_PAD_LCD1_DATA11__LCDIF1_DATA_11	0x000b0
+				MX6SX_PAD_LCD1_DATA12__LCDIF1_DATA_12	0x000b0
+				MX6SX_PAD_LCD1_DATA13__LCDIF1_DATA_13	0x000b0
+				MX6SX_PAD_LCD1_DATA14__LCDIF1_DATA_14	0x000b0
+				MX6SX_PAD_LCD1_DATA15__LCDIF1_DATA_15	0x000b0
+				MX6SX_PAD_LCD1_DATA16__LCDIF1_DATA_16	0x000b0
+				MX6SX_PAD_LCD1_DATA17__LCDIF1_DATA_17	0x000b0
+				MX6SX_PAD_LCD1_ENABLE__LCDIF1_ENABLE	0x000b0
+				MX6SX_PAD_LCD1_HSYNC__LCDIF1_HSYNC	0x000b0
+				MX6SX_PAD_LCD1_VSYNC__LCDIF1_VSYNC	0x000b0
 			>;
 		};
 
@@ -1197,22 +1184,22 @@ lvds_wvga {				\
 		pinctrl_gpmi_nand_1: gpmi-nand-1 {
 			/* Already configured in NBoot/U-Boot */
 			fsl,pins = <
-				MX6SX_PAD_NAND_CLE__RAWNAND_CLE		0xb0b1
-				MX6SX_PAD_NAND_ALE__RAWNAND_ALE		0xb0b1
-				MX6SX_PAD_NAND_WP_B__RAWNAND_WP_B	0xb0b1
-				MX6SX_PAD_NAND_READY_B__RAWNAND_READY_B	0xb000
-				MX6SX_PAD_NAND_CE0_B__RAWNAND_CE0_B	0xb0b1
-				//MX6SX_PAD_NAND_CE1_B__RAWNAND_CE1_B	0xb0b1
-				MX6SX_PAD_NAND_RE_B__RAWNAND_RE_B	0xb0b1
-				MX6SX_PAD_NAND_WE_B__RAWNAND_WE_B	0xb0b1
-				MX6SX_PAD_NAND_DATA00__RAWNAND_DATA00	0xb0b1
-				MX6SX_PAD_NAND_DATA01__RAWNAND_DATA01	0xb0b1
-				MX6SX_PAD_NAND_DATA02__RAWNAND_DATA02	0xb0b1
-				MX6SX_PAD_NAND_DATA03__RAWNAND_DATA03	0xb0b1
-				MX6SX_PAD_NAND_DATA04__RAWNAND_DATA04	0xb0b1
-				MX6SX_PAD_NAND_DATA05__RAWNAND_DATA05	0xb0b1
-				MX6SX_PAD_NAND_DATA06__RAWNAND_DATA06	0xb0b1
-				MX6SX_PAD_NAND_DATA07__RAWNAND_DATA07	0xb0b1
+				MX6SX_PAD_NAND_CLE__RAWNAND_CLE		0x0b0b1
+				MX6SX_PAD_NAND_ALE__RAWNAND_ALE		0x0b0b1
+				MX6SX_PAD_NAND_WP_B__RAWNAND_WP_B	0x0b0b1
+				MX6SX_PAD_NAND_READY_B__RAWNAND_READY_B	0x0b000
+				MX6SX_PAD_NAND_CE0_B__RAWNAND_CE0_B	0x0b0b1
+				//MX6SX_PAD_NAND_CE1_B__RAWNAND_CE1_B	0x0b0b1
+				MX6SX_PAD_NAND_RE_B__RAWNAND_RE_B	0x0b0b1
+				MX6SX_PAD_NAND_WE_B__RAWNAND_WE_B	0x0b0b1
+				MX6SX_PAD_NAND_DATA00__RAWNAND_DATA00	0x0b0b1
+				MX6SX_PAD_NAND_DATA01__RAWNAND_DATA01	0x0b0b1
+				MX6SX_PAD_NAND_DATA02__RAWNAND_DATA02	0x0b0b1
+				MX6SX_PAD_NAND_DATA03__RAWNAND_DATA03	0x0b0b1
+				MX6SX_PAD_NAND_DATA04__RAWNAND_DATA04	0x0b0b1
+				MX6SX_PAD_NAND_DATA05__RAWNAND_DATA05	0x0b0b1
+				MX6SX_PAD_NAND_DATA06__RAWNAND_DATA06	0x0b0b1
+				MX6SX_PAD_NAND_DATA07__RAWNAND_DATA07	0x0b0b1
 			>;
 		};
 #endif
@@ -1347,8 +1334,10 @@ lvds_wvga {				\
 				MX6SX_PAD_SD1_DATA1__USDHC1_DATA1	0x17071
 				MX6SX_PAD_SD1_DATA2__USDHC1_DATA2	0x17071
 				MX6SX_PAD_SD1_DATA3__USDHC1_DATA3	0x17071
-				MX6SX_PAD_GPIO1_IO02__GPIO1_IO_2	0x17000 /* CD */
-				MX6SX_PAD_GPIO1_IO03__GPIO1_IO_3	0x17000 /* WP */
+				/* CD */
+				MX6SX_PAD_GPIO1_IO02__GPIO1_IO_2	0x17000
+				/* WP */
+				MX6SX_PAD_GPIO1_IO03__GPIO1_IO_3	0x17000
 			>;
 		};
 
@@ -1361,8 +1350,10 @@ lvds_wvga {				\
 				MX6SX_PAD_SD2_DATA1__USDHC2_DATA1	0x17071
 				MX6SX_PAD_SD2_DATA2__USDHC2_DATA2	0x17071
 				MX6SX_PAD_SD2_DATA3__USDHC2_DATA3	0x17071
-				MX6SX_PAD_GPIO1_IO06__GPIO1_IO_6	0x17000 /* CD */
-				MX6SX_PAD_GPIO1_IO07__GPIO1_IO_7	0x17000 /* WP */
+				/* CD */
+				MX6SX_PAD_GPIO1_IO06__GPIO1_IO_6	0x17000
+				/* WP */
+				MX6SX_PAD_GPIO1_IO07__GPIO1_IO_7	0x17000
 			>;
 		};
 
